R: keras → keras3 (Google Colab)

--- a/code/R-notebook/r-04.ipynb
+++ b/code/R-notebook/r-04.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "9e4e196f",
+      "id": "53fea5fc",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"exactci\", \"ggmosaic\", \"pastecs\", \"psych\", \"vcd\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "8aa81606-d61a-4c5a-a8d7-5e05b6ae9312"
+      "id": "ad9d6df5-1a29-4902-ab76-1235bfc838d7"
     },
     {
-      "id": "181e0d4d",
+      "id": "6a6a8c4b",
       "cell_type": "markdown",
       "source": "## 4.1 \u8a18\u8ff0\u7d71\u8a08",
       "metadata": {}
@@ -37,7 +37,7 @@
         "x <- c(165, 170, 175, 180, 185)\n",
         "mean(x) # \u5e73\u5747"
       ],
-      "id": "8cfb310f-5fe7-43db-bfde-f6fb30e69dbf"
+      "id": "cd78ab63-48e7-4eab-a662-599b744377e1"
     },
     {
       "cell_type": "code",
@@ -48,7 +48,7 @@
         "n <- length(x) # \u30b5\u30f3\u30d7\u30eb\u30b5\u30a4\u30ba\n",
         "sum(x) / n"
       ],
-      "id": "91a48247-f919-4c96-b370-f4089ea041d5"
+      "id": "65259099-e64f-4d88-aee8-e78499bcf305"
     },
     {
       "cell_type": "code",
@@ -59,7 +59,7 @@
         "y <- c(173, 174, 175, 176, 177)\n",
         "mean(y)"
       ],
-      "id": "2e492765-8a05-43d2-b38b-87587e116479"
+      "id": "63118642-9bc2-4319-8bf4-d686217fd5f6"
     },
     {
       "cell_type": "code",
@@ -71,7 +71,7 @@
         "\n",
         "var(y) # y\u306e\u5206\u6563"
       ],
-      "id": "034a8720-20c8-406e-a5ae-6799481c89af"
+      "id": "fc68ef60-5453-416a-9be1-839c115bc942"
     },
     {
       "cell_type": "code",
@@ -81,7 +81,7 @@
       "source": [
         "sum((x - mean(x))^2) / (n - 1)"
       ],
-      "id": "018ac0c9-ea56-42a2-9d19-d234196a85f6"
+      "id": "96e60deb-4732-4be9-91bb-b055a4ba1202"
     },
     {
       "cell_type": "code",
@@ -93,7 +93,7 @@
         "\n",
         "sd(y) # y\u306e\u6a19\u6e96\u504f\u5dee"
       ],
-      "id": "258853e8-e73d-4eee-9bf5-4090f8d38f79"
+      "id": "e48f2e31-730e-4da1-9a22-74b50ef67124"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
       "source": [
         "var(x)**0.5 # x\u306e\u6a19\u6e96\u504f\u5dee"
       ],
-      "id": "7a2d36d5-0782-4280-a8a6-16f38f720cb8"
+      "id": "ec5c60f3-9b44-4174-ae1d-c560812e6def"
     },
     {
       "cell_type": "code",
@@ -117,7 +117,7 @@
         "\n",
         "pastecs::stat.desc(x)"
       ],
-      "id": "6ff49b38-213f-41f6-9ff2-1d098de86e4b"
+      "id": "20fcd71f-9fb4-4132-a6d8-f5e8038b017c"
     },
     {
       "cell_type": "code",
@@ -127,7 +127,7 @@
       "source": [
         "quantile(x)"
       ],
-      "id": "da36cdce-5eb9-4a2a-9481-7bbb2dd31f06"
+      "id": "074be857-53fe-4f5e-aff8-68445a0f666b"
     },
     {
       "cell_type": "code",
@@ -144,7 +144,7 @@
         "n <- length(x)\n",
         "var(x) * (n - 1) / n  # \u6a19\u672c\u5206\u6563"
       ],
-      "id": "036b7dc2-5547-49a0-91e0-a72dae4c32fd"
+      "id": "f7ea98e6-a752-447e-9abd-f02601c89789"
     },
     {
       "cell_type": "code",
@@ -158,7 +158,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "sd(x) * sqrt((n - 1) / n) # \u221a\u6a19\u672c\u5206\u6563"
       ],
-      "id": "b902a47d-6596-4e09-b10a-e76c5dcf8d43"
+      "id": "a7f7540d-6a1c-4073-ad13-ac2fdb59db13"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
       "source": [
         "sd(x) / length(x)**0.5"
       ],
-      "id": "50017e8c-24ff-4dfa-a4a6-75ae690c5caa"
+      "id": "8181decb-177d-4102-8b43-6fa6b846ac8a"
     },
     {
       "cell_type": "code",
@@ -184,7 +184,7 @@
         "  math    = c( 70,  80,  90, 100),\n",
         "  gender  = c(\"f\", \"m\", \"m\", \"f\"))"
       ],
-      "id": "c1a7e551-aa52-4c50-894b-bc47164e7431"
+      "id": "f0e204bd-d58e-437e-a8ad-2d0f2d867a29"
     },
     {
       "cell_type": "code",
@@ -194,7 +194,7 @@
       "source": [
         "var(my_df$english)"
       ],
-      "id": "1344fe38-edbb-4fac-b810-39648242e75f"
+      "id": "c317d337-1fe1-443d-adde-6e26661e4e6d"
     },
     {
       "cell_type": "code",
@@ -224,7 +224,7 @@
         "    where(is.numeric), # \u6570\u5024\u306e\u5217\u306e\n",
         "    function(x) { var(x) })) # \u4e0d\u504f\u5206\u6563\n"
       ],
-      "id": "e06dd962-7658-4e86-a2ff-eefb8844d99d"
+      "id": "ad3e90c1-f4b3-4cac-ad10-bfc85438f425"
     },
     {
       "cell_type": "code",
@@ -239,7 +239,7 @@
         "pastecs::stat.desc(my_df)\n",
         "# \u4ee5\u4e0b\u7701\u7565"
       ],
-      "id": "44178bcb-50d4-456e-9976-02683a468eff"
+      "id": "ab9cef2f-ac66-4d3b-a6a6-4ad62ecfe224"
     },
     {
       "cell_type": "code",
@@ -249,7 +249,7 @@
       "source": [
         "table(my_df$gender)\n"
       ],
-      "id": "25c95201-3513-4f1f-9e54-0a8f1eeedcc9"
+      "id": "a0b3dc73-991e-4ece-8e88-9e02607fd00e"
     },
     {
       "cell_type": "code",
@@ -262,7 +262,7 @@
         "  excel = my_df$math >= 80)\n",
         "table(my_df2)\n"
       ],
-      "id": "052718a6-fabc-466a-8f59-1f8516758bcb"
+      "id": "4fda20df-0620-4ad6-a879-5c1eb4917a7a"
     },
     {
       "cell_type": "code",
@@ -275,10 +275,10 @@
         "    where(is.numeric), mean),\n",
         "    .groups = \"drop\") # \u30b0\u30eb\u30fc\u30d7\u5316\u89e3\u9664\n"
       ],
-      "id": "dc879202-16cf-4879-acd0-5d3347667fe3"
+      "id": "8c75d75d-76c5-42bf-bf37-29a283809d61"
     },
     {
-      "id": "7b6594fb",
+      "id": "e80888bf",
       "cell_type": "markdown",
       "source": "## 4.2 \u30c7\u30fc\u30bf\u306e\u53ef\u8996\u5316",
       "metadata": {}
@@ -291,7 +291,7 @@
       "source": [
         "head(iris)"
       ],
-      "id": "0399d8ac-418a-46ad-aca4-761edb2d8182"
+      "id": "89fb9bfa-e0f7-42bf-9a9a-46ba2cecb229"
     },
     {
       "cell_type": "code",
@@ -301,7 +301,7 @@
       "source": [
         "hist(iris$Sepal.Length)"
       ],
-      "id": "ec743fc7-1018-4d23-952f-29564102aa68"
+      "id": "111a4cf1-c169-437c-b1ec-7b9c7f3a1177"
     },
     {
       "cell_type": "code",
@@ -312,7 +312,7 @@
         "x <- c(10, 20, 30)\n",
         "hist(x, breaks = 2) # \u968e\u7d1a\u6570\u306f2"
       ],
-      "id": "48d99619-1268-4b70-99f6-db8d921cf4de"
+      "id": "4d77bf5f-4b90-46c4-8efa-7799a67236d2"
     },
     {
       "cell_type": "code",
@@ -325,7 +325,7 @@
         "           length.out = 10)\n",
         "hist(x, breaks = tmp, right = FALSE)"
       ],
-      "id": "d98a6fd8-896d-41cf-a5b4-730abd52530f"
+      "id": "579b3646-637e-4b2d-a0f0-ec2d979cbdea"
     },
     {
       "cell_type": "code",
@@ -336,7 +336,7 @@
         "plot(iris$Sepal.Length,\n",
         "     iris$Sepal.Width)"
       ],
-      "id": "43b8d302-ae31-41a2-85a8-94959f3ac391"
+      "id": "66b3c0eb-c509-43e4-81c9-fc3a904e2586"
     },
     {
       "cell_type": "code",
@@ -346,7 +346,7 @@
       "source": [
         "boxplot(iris[, -5])"
       ],
-      "id": "9ff21820-5607-4175-a9f8-d81b04efa5b2"
+      "id": "7b42c856-501e-4872-a68e-fa777c6135bb"
     },
     {
       "cell_type": "code",
@@ -358,7 +358,7 @@
         "my_df <- psych::describe(iris[, -5])\n",
         "my_df %>% select(mean, sd, se)"
       ],
-      "id": "c0701302-fe77-4ab6-8271-9f91c84b16e4"
+      "id": "911a269f-a02b-48a2-881b-27d52ee8d77d"
     },
     {
       "cell_type": "code",
@@ -372,7 +372,7 @@
         "  geom_errorbar(aes(ymin = mean - se, ymax = mean + se)) +\n",
         "  xlab(NULL)"
       ],
-      "id": "45e5827c-ae2b-4708-aad5-3bb4f3d5fe5c"
+      "id": "3ad2bf84-b6f3-4925-b03c-721e4d0632f5"
     },
     {
       "cell_type": "code",
@@ -393,7 +393,7 @@
         "my_df$se <- tmp$value\n",
         "head(my_df)"
       ],
-      "id": "d9db061b-1c07-48e8-be5a-a601e6c6fe7a"
+      "id": "7cd87b44-f31a-459f-86d3-01416c45cf0e"
     },
     {
       "cell_type": "code",
@@ -406,7 +406,7 @@
         "  geom_col(position = \"dodge\") +\n",
         "  geom_errorbar(aes(ymin = value - se, ymax = value + se), position = \"dodge\")"
       ],
-      "id": "a7054521-7036-466f-8349-4ed737aa86e9"
+      "id": "93c1e812-8098-4d99-8bbc-8d1c5673a19a"
     },
     {
       "cell_type": "code",
@@ -427,7 +427,7 @@
         "  geom_bar(stat = \"summary\", fun = mean, position = \"dodge\") +\n",
         "  stat_summary(geom = \"errorbar\", fun.data = mean_se, position = \"dodge\")"
       ],
-      "id": "0dad91d3-05c3-4130-9770-02333340151d"
+      "id": "2230c3b3-2db0-45e1-8edd-ef2a58d5782b"
     },
     {
       "cell_type": "code",
@@ -444,7 +444,7 @@
         "  formula = ~ Species + w_Sepal,\n",
         "  data = my_df)"
       ],
-      "id": "663bb934-0116-4621-8d68-62b8b485138a"
+      "id": "ac00404e-0734-41c6-89b0-e2919cbfc630"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "vcd::mosaic(formula = ~w_Sepal + Species, data = my_df,\n",
         "            labeling = labeling_values)"
       ],
-      "id": "80a097b0-77d7-46a7-9c66-4b8dad9c2702"
+      "id": "dcc7b2d4-c271-4ca3-aafd-ff94ae48105c"
     },
     {
       "cell_type": "code",
@@ -466,7 +466,7 @@
       "source": [
         "curve(x^3 - x, -2, 2)"
       ],
-      "id": "e8c4ffc9-5f52-4854-b05b-8d6abea6fd07"
+      "id": "cc769be4-7a8c-4f31-9026-68ae49add9b0"
     },
     {
       "cell_type": "code",
@@ -482,7 +482,7 @@
         "  geom_histogram(breaks = tmp,\n",
         "                 closed = \"left\")"
       ],
-      "id": "511b5af4-9474-4316-a8ca-d419bf00e86a"
+      "id": "dc17e74f-e597-40dc-9bde-18e8792ddedc"
     },
     {
       "cell_type": "code",
@@ -495,7 +495,7 @@
         "             y = Sepal.Width)) +\n",
         "  geom_point()"
       ],
-      "id": "dfc3551f-6fae-41b5-9bb6-831f5c165e92"
+      "id": "dd6bc4d5-87cb-42a5-9f6e-dea9d6227274"
     },
     {
       "cell_type": "code",
@@ -512,7 +512,7 @@
         "  geom_boxplot() +\n",
         "  xlab(NULL)"
       ],
-      "id": "39aa7e3b-5765-481c-b342-8c867433a78f"
+      "id": "c23906d6-2811-4e84-8e76-5dd3dc3bbe45"
     },
     {
       "cell_type": "code",
@@ -529,7 +529,7 @@
         "  geom_mosaic(\n",
         "    aes(x = product(w_Sepal, Species)))"
       ],
-      "id": "d04a41d2-8f61-46b2-b471-74e24dafe106"
+      "id": "bd372c73-5d65-4da3-9685-a0397ae4c84f"
     },
     {
       "cell_type": "code",
@@ -542,10 +542,10 @@
         "  ggplot(aes(x = x)) +\n",
         "  stat_function(fun = f)"
       ],
-      "id": "eac451d0-099f-41ab-9f36-9884197e7841"
+      "id": "b15374fa-cbc4-44d8-944a-c18593dc747b"
     },
     {
-      "id": "3e4b66d0",
+      "id": "49ca4c6b",
       "cell_type": "markdown",
       "source": "## 4.3 \u4e71\u6570",
       "metadata": {}
@@ -561,7 +561,7 @@
         "            replace = TRUE) # \u91cd\u8907\u3042\u308a\n",
         "hist(x, breaks = 0:6) # \u30d2\u30b9\u30c8\u30b0\u30e9\u30e0"
       ],
-      "id": "f662f448-4ecb-4bba-834b-0ccad64be275"
+      "id": "49cd12c9-d5b3-419e-a941-ba9f0249498a"
     },
     {
       "cell_type": "code",
@@ -574,7 +574,7 @@
         "           n = 1000) # \u4e71\u6570\u306e\u6570\n",
         "hist(x)"
       ],
-      "id": "ff929395-72f2-4161-8c16-ec1057d787e4"
+      "id": "49e0432c-4e24-46c6-848a-377f14ce278e"
     },
     {
       "cell_type": "code",
@@ -588,7 +588,7 @@
         "        n = 1000))    # \u4e71\u6570\u306e\u6570\n",
         "hist(x, breaks = 0:6) # \u7d50\u679c\u306f\u5272\u611b"
       ],
-      "id": "aeafb5bb-c54d-40d6-a53c-295b268f9580"
+      "id": "9a00b3e0-59af-4d8d-8c5b-addad8e3e422"
     },
     {
       "cell_type": "code",
@@ -604,7 +604,7 @@
         "            n = r)    # \u4e71\u6570\u306e\u6570\n",
         "hist(x, breaks = max(x) - min(x))"
       ],
-      "id": "bf81dcc9-6d78-4c71-9748-c9c36d971b02"
+      "id": "7b57e154-d4b4-4360-a4b7-9dd8dc3c3df2"
     },
     {
       "cell_type": "code",
@@ -618,7 +618,7 @@
         "           n = r)     # \u4e71\u6570\u306e\u6570\n",
         "hist(x, breaks = 40)"
       ],
-      "id": "61c612a3-0f5c-400c-8173-43c323977d24"
+      "id": "4b187ccb-6cc5-487f-8610-cf123fe38642"
     },
     {
       "cell_type": "code",
@@ -636,7 +636,7 @@
         "       se = sd(tmp) / sqrt(n)) # \u6a19\u6e96\u8aa4\u5dee\n",
         "}"
       ],
-      "id": "db0953de-b1d0-4320-b52a-f4f4887bf3f4"
+      "id": "d4317ec9-f14d-44b0-80fa-32538a69d908"
     },
     {
       "cell_type": "code",
@@ -647,7 +647,7 @@
         "g <- var\n",
         "c(10, 20, 30) %>% map_dfr(f)"
       ],
-      "id": "95015b40-3539-4236-9bba-96167c5fbba1"
+      "id": "d0d1c86c-a5ab-4981-828b-675981adf333"
     },
     {
       "cell_type": "code",
@@ -658,7 +658,7 @@
         "g <- sd\n",
         "c(5, 10, 15, 20) %>% map_dfr(f)"
       ],
-      "id": "9581f476-e169-4835-982a-8d5528a791bc"
+      "id": "8dc54773-a6d2-4f2b-b470-1c82316ec76c"
     },
     {
       "cell_type": "code",
@@ -675,10 +675,10 @@
         "}\n",
         "c(10, 20, 30) %>% map_dfr(f)"
       ],
-      "id": "a77f0a49-4b06-4937-b9ce-774aa8f66dd8"
+      "id": "57db9c95-3ee5-4d5e-ae25-9fa55abed316"
     },
     {
-      "id": "11af3431",
+      "id": "c2ed25b6",
       "cell_type": "markdown",
       "source": "## 4.4 \u7d71\u8a08\u7684\u63a8\u6e2c",
       "metadata": {}
@@ -703,7 +703,7 @@
         "                                       # \u5de6\u7247\u5074\u691c\u5b9a\u306a\u3089'less'\n",
         "                                       # \u53f3\u7247\u5074\u691c\u5b9a\u306a\u3089'greater'\n"
       ],
-      "id": "595e6a2a-87c9-4d4d-a371-e3efd57129ca"
+      "id": "9e67365f-a8e1-4081-8bd5-2bf552affd22"
     },
     {
       "cell_type": "code",
@@ -727,7 +727,7 @@
         "  geom_hline(yintercept = my_pr2) +                     # \u6c34\u5e73\u7dda\n",
         "  theme(legend.position = \"none\")                       # \u51e1\u4f8b\u3092\u8868\u793a\u3057\u306a\u3044\uff0e"
       ],
-      "id": "e8b89709-788d-4195-b2c3-b15d190235bb"
+      "id": "4d5fcbbf-74cd-4c18-a383-1f480867f3b4"
     },
     {
       "cell_type": "code",
@@ -737,7 +737,7 @@
       "source": [
         "# \u524d\u9805\u306e\u7d50\u679c\uff08\u518d\u63b2\uff09"
       ],
-      "id": "fd5f8172-136a-4519-9a98-36e49b0fb8d9"
+      "id": "fcb21c1f-dc5e-451f-9463-f0d6f26e8791"
     },
     {
       "cell_type": "code",
@@ -747,7 +747,7 @@
       "source": [
         "# \u524d\u9805\u5192\u982d\u306e\u30b3\u30fc\u30c9"
       ],
-      "id": "1049be5c-7d39-4e70-b323-8f8e91a353f5"
+      "id": "970fc6ba-b601-4ac2-aa2a-2b07aa81f66c"
     },
     {
       "cell_type": "code",
@@ -767,7 +767,7 @@
         "                                  # \u5de6\u7247\u5074\u691c\u5b9a\u306a\u3089'less'\n",
         "                                  # \u53f3\u7247\u5074\u691c\u5b9a\u306a\u3089'greater'\n"
       ],
-      "id": "1f14822b-7574-487b-87f3-96ea3475bdfe"
+      "id": "f7929e1e-c9cd-4726-8a36-5f314a64fbe0"
     },
     {
       "cell_type": "code",
@@ -781,7 +781,7 @@
         "       alternative = \"two.sided\",\n",
         "       conf.level = 0.95)\n"
       ],
-      "id": "473812d3-6494-47ae-a622-454842e14439"
+      "id": "bfa5698b-d070-4e8f-95cf-329ab87912ac"
     },
     {
       "cell_type": "code",
@@ -793,7 +793,7 @@
         "                \"/fromzero/master/data/smoker.csv\")\n",
         "my_data <- read_csv(my_url)"
       ],
-      "id": "1662c925-1ec3-4e07-af09-cdb0d664c496"
+      "id": "ed85ec16-060e-4cd8-a543-c5da01689c37"
     },
     {
       "cell_type": "code",
@@ -803,7 +803,7 @@
       "source": [
         "head(my_data)"
       ],
-      "id": "ecd5ac3f-fc07-4caa-a230-2bb2b385dc2f"
+      "id": "e0695b67-36bc-4338-98ae-dd78e1a66508"
     },
     {
       "cell_type": "code",
@@ -814,7 +814,7 @@
         "my_table <- table(my_data)\n",
         "my_table"
       ],
-      "id": "5c3de95c-93aa-4394-a5a2-1bbe295b6122"
+      "id": "2ec3cc20-62bc-456b-bca7-4c13e12e0e85"
     },
     {
       "cell_type": "code",
@@ -824,7 +824,7 @@
       "source": [
         "chisq.test(my_table, correct = FALSE)\n"
       ],
-      "id": "2b1e1964-d670-4041-87a8-b25eff4ecb01"
+      "id": "27df2a15-df51-43af-a46d-edaaf78e515c"
     },
     {
       "cell_type": "code",
@@ -843,7 +843,7 @@
         "n <- 10^5\n",
         "result <- replicate(n, sum(sample(X, size = length(X), replace = TRUE))) # \u624b\u98064"
       ],
-      "id": "eb9639fd-1bc9-410d-b84a-a0dd1e26445e"
+      "id": "b1220423-fa85-4d11-a358-df08d6e2212d"
     },
     {
       "cell_type": "code",
@@ -854,7 +854,7 @@
         "hist(x = result, breaks = 0:15,\n",
         "     right = FALSE)"
       ],
-      "id": "593b6a72-aad0-46c0-8a03-a8255cfa481c"
+      "id": "a0cc3a6f-2339-40b9-bcb6-93e61089ed63"
     },
     {
       "cell_type": "code",
@@ -864,7 +864,7 @@
       "source": [
         "quantile(result, c(0.025, 0.975))"
       ],
-      "id": "2ff7f8d7-4e45-47f4-b6e5-1dc8d8e9e144"
+      "id": "956a03e9-0ac7-4265-91df-a85901961005"
     }
   ],
   "nbformat": 4,
