--- a/code/R-notebook/r-05.ipynb
+++ b/code/R-notebook/r-05.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "72fd07eb",
+      "id": "3e357f5f",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "a7e2002e-f652-4a1b-b3b5-84eebd930b0c"
+      "id": "93659b29-5854-415b-b43d-939585ed2bd9"
     },
     {
-      "id": "78b14b54",
+      "id": "55c679bb",
       "cell_type": "markdown",
       "source": "## 5.1 \u30c7\u30fc\u30bf\u306e\u8aad\u307f\u8fbc\u307f",
       "metadata": {}
@@ -38,7 +38,7 @@
         "system(str_c(\"wget https://raw.githubusercontent.com/taroyabuki\",\n",
         "             \"/fromzero/master/data/exam.csv\"))"
       ],
-      "id": "9accab33-bdbc-4d6c-859b-7656549b14ca"
+      "id": "2ba20603-75bf-47a2-b17f-eac12a6b0fcf"
     },
     {
       "cell_type": "code",
@@ -53,7 +53,7 @@
         "\n",
         "my_df"
       ],
-      "id": "feafed3d-484b-4e04-823e-9c23bd010aad"
+      "id": "7585b05e-6828-49c6-a712-52fbb74c22dd"
     },
     {
       "cell_type": "code",
@@ -67,7 +67,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_df <- read.csv(my_url, stringsAsFactors = FALSE)"
       ],
-      "id": "c1115968-30de-410e-be24-73c56aea593d"
+      "id": "9c427568-6a78-4961-b7e7-8001350c58d1"
     },
     {
       "cell_type": "code",
@@ -81,7 +81,7 @@
         "  row.names = 1)\n",
         "my_df2"
       ],
-      "id": "b378367f-eb5f-4d2f-8b90-82b0c4c9ec9d"
+      "id": "cfa7c5e3-2d4b-435b-8c0d-285d9e3ff3d3"
     },
     {
       "cell_type": "code",
@@ -95,7 +95,7 @@
         "  file = \"exam2.csv\",\n",
         "  row.names = FALSE)"
       ],
-      "id": "ea22a65c-1f40-4c49-ba5c-0b3d602303ee"
+      "id": "7c576099-3fe6-415d-b6b7-c1f8dae6d443"
     },
     {
       "cell_type": "code",
@@ -105,7 +105,7 @@
       "source": [
         "my_df2 %>% write.csv(\"exam3.csv\")"
       ],
-      "id": "3bd51b42-9abe-4fae-8a2f-f931e0f9c450"
+      "id": "846e4315-9ca1-4f29-9050-e7ee639ab35d"
     },
     {
       "cell_type": "code",
@@ -120,7 +120,7 @@
         "  stringsAsFactors = FALSE,\n",
         "  fileEncoding = \"UTF-8\")"
       ],
-      "id": "87a19a5e-c2b0-47d9-be72-33b88dc9542e"
+      "id": "b2ecc0f5-6e07-47d3-aed5-298ab2b97553"
     },
     {
       "cell_type": "code",
@@ -133,7 +133,7 @@
         "my_df %>% write.csv(file = \"exam2.csv\", row.names = FALSE,\n",
         "                    fileEncoding = \"UTF-8\")"
       ],
-      "id": "ffcfa6c1-018d-42ba-a336-fc3886a8d4c8"
+      "id": "1dfa33a2-4a2e-414a-94e3-64cbd9ba5b82"
     },
     {
       "cell_type": "code",
@@ -144,7 +144,7 @@
         "my_url <- \"https://taroyabuki.github.io/fromzero/exam.html\"\n",
         "my_tables <- xml2::read_html(my_url) %>% rvest::html_table()"
       ],
-      "id": "d8485f26-a096-41e4-8b3c-2fde40d391f0"
+      "id": "9d2fb863-0f29-4e47-84f2-d22368e0cfdd"
     },
     {
       "cell_type": "code",
@@ -154,7 +154,7 @@
       "source": [
         "my_tables"
       ],
-      "id": "8e5d210f-fa9b-4eca-acb1-81c03ad0c875"
+      "id": "2bf2e4e5-6422-41f3-8473-a5b4de935d7b"
     },
     {
       "cell_type": "code",
@@ -165,7 +165,7 @@
         "tmp <- my_tables[[1]]\n",
         "tmp"
       ],
-      "id": "3f363dd1-9614-4c7b-b397-e046ee059f26"
+      "id": "f667a62e-97b6-4954-97a7-37e40d56037d"
     },
     {
       "cell_type": "code",
@@ -180,7 +180,7 @@
         "my_data <- tmp[-1, -1]\n",
         "my_data"
       ],
-      "id": "d44db1e3-011b-4437-8676-6975dddcf577"
+      "id": "c7e955af-95b2-4ce7-9c63-359557c59d31"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
         "#my_data <- fromJSON(\"exam.json\") # \uff08\u30d5\u30a1\u30a4\u30eb\u3092\u4f7f\u3046\u5834\u5408\uff09\n",
         "my_data"
       ],
-      "id": "a13b4567-0848-47f1-a8e3-edd8343cb949"
+      "id": "1bc0c3fc-16c8-4cd4-b374-6dab8636fe20"
     },
     {
       "cell_type": "code",
@@ -210,7 +210,7 @@
         "#my_xml <- read_xml(\"exam.xml\") # \uff08\u30d5\u30a1\u30a4\u30eb\u3092\u4f7f\u3046\u5834\u5408\uff09\n",
         "xml_ns(my_xml)                  # \u540d\u524d\u7a7a\u9593\u306e\u78ba\u8a8d\uff08d1\uff09"
       ],
-      "id": "fda06807-9ea4-4436-971d-544f6a732efd"
+      "id": "04efb366-8b1f-4ac8-95d1-7d0a5adebb6e"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
       "source": [
         "my_records <- xml_find_all(my_xml, \".//d1:record\")"
       ],
-      "id": "064a941e-b2b0-4657-b9b3-559e4a5f6026"
+      "id": "862f25ce-31b3-400b-a46d-da5043b2dd97"
     },
     {
       "cell_type": "code",
@@ -236,7 +236,7 @@
         "  tmp\n",
         "}"
       ],
-      "id": "e9bb526e-a4d7-4745-b0ac-750c4e2828da"
+      "id": "c4c6b625-e68e-4274-bc39-8e41aacd9486"
     },
     {
       "cell_type": "code",
@@ -249,10 +249,10 @@
         "my_data$math    <- as.numeric(my_data$math)\n",
         "my_data"
       ],
-      "id": "b62f0810-5094-485f-b37e-9ebdf267fc48"
+      "id": "2e88d421-b204-4620-b195-c6dee3eb8dc7"
     },
     {
-      "id": "0a0d6ab3",
+      "id": "448df3b8",
       "cell_type": "markdown",
       "source": "## 5.2 \u30c7\u30fc\u30bf\u306e\u5909\u63db",
       "metadata": {}
@@ -271,7 +271,7 @@
         "\n",
         "z1"
       ],
-      "id": "a158882e-aedb-4dfa-a870-6d614d9b03f2"
+      "id": "78d57f10-c12a-4959-95db-336dffb60cd6"
     },
     {
       "cell_type": "code",
@@ -281,7 +281,7 @@
       "source": [
         "c(mean(z1), sd(z1))"
       ],
-      "id": "d97d618f-69eb-44d0-8fb1-54469f203be8"
+      "id": "db064636-1fba-43a7-8b26-ab0c20059cd7"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
       "source": [
         "z1 * sd(x1) + mean(x1)"
       ],
-      "id": "50833e56-3728-4d39-aefa-0942f4f2fa20"
+      "id": "b9fb91ed-c724-40db-9b6f-273f1ac5c9ed"
     },
     {
       "cell_type": "code",
@@ -303,7 +303,7 @@
         "z2 <- (x2 - mean(x1)) / sd(x1)\n",
         "c(mean(z2), sd(z2))"
       ],
-      "id": "81fe60fe-7416-4b3c-b524-8c72b31b0340"
+      "id": "44e64dd5-9330-4315-8477-f42964969052"
     },
     {
       "cell_type": "code",
@@ -324,7 +324,7 @@
         "\n",
         "my_enc %>% predict(my_df)"
       ],
-      "id": "f37f1e1c-f659-4a24-8387-44aa998a2212"
+      "id": "a5f2488d-2778-4b03-80dd-5ccabac8bfb9"
     },
     {
       "cell_type": "code",
@@ -337,7 +337,7 @@
         "  class = c(\"B\", \"C\", \"B\"))\n",
         "my_enc %>% predict(my_df2)"
       ],
-      "id": "27d16422-5563-4949-a759-76a5efb778c7"
+      "id": "b2926095-db47-4d26-957a-bdbd3664f4bd"
     },
     {
       "cell_type": "code",
@@ -352,7 +352,7 @@
         "\n",
         "my_enc %>% predict(my_df2)"
       ],
-      "id": "7fe62cbc-3a0a-4ee7-a720-db33f8d29fa9"
+      "id": "6daa01dd-cd7b-4010-b1f3-e749290268ba"
     }
   ],
   "nbformat": 4,
