--- a/code/R-notebook/r-07.ipynb
+++ b/code/R-notebook/r-07.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "269b759b",
+      "id": "4e0f0824",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,23 +13,23 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\", \"doParallel\", \"pastecs\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "2c65ecb5-2c56-49a3-8810-65e38775d013"
+      "id": "4e4cecf2-b43c-4ad7-9c8c-7cee4d50d8a8"
     },
     {
-      "id": "3411147a",
+      "id": "50dc6053",
       "cell_type": "markdown",
       "source": "## 7.1 \u81ea\u52d5\u8eca\u306e\u505c\u6b62\u8ddd\u96e2\n\n\n",
       "metadata": {}
     },
     {
-      "id": "6e77ec29",
+      "id": "5eb5f951",
       "cell_type": "markdown",
       "source": "## 7.2 \u30c7\u30fc\u30bf\u306e\u78ba\u8a8d",
       "metadata": {}
@@ -44,7 +44,7 @@
         "library(tidyverse)\n",
         "my_data <- cars"
       ],
-      "id": "45259c87-dc73-4322-832f-c87c3e9f3d8e"
+      "id": "f80cf964-cb70-4032-83e1-69c9bd041832"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
       "source": [
         "dim(my_data)"
       ],
-      "id": "bccae59c-56be-4207-baf6-515d673b772d"
+      "id": "8dc267db-ed9c-45b2-85e4-1e0af91da467"
     },
     {
       "cell_type": "code",
@@ -64,7 +64,7 @@
       "source": [
         "head(my_data)"
       ],
-      "id": "6e13abe7-1ba3-410e-a509-f425adbf0461"
+      "id": "04904704-d519-409c-b18d-ba4ab182b90e"
     },
     {
       "cell_type": "code",
@@ -75,7 +75,7 @@
         "options(digits = 3)\n",
         "pastecs::stat.desc(my_data)"
       ],
-      "id": "938f6866-58f8-4943-9853-6e867bf73750"
+      "id": "beb7f4fc-9914-471c-82d5-31f7a0dc6aba"
     },
     {
       "cell_type": "code",
@@ -87,10 +87,10 @@
         "  ggplot(aes(x = speed, y = dist)) +\n",
         "  geom_point()"
       ],
-      "id": "1d6c10b0-bf9d-4fc5-b94b-e7c3fa03ff6e"
+      "id": "65f8d517-6162-4751-90cd-7f1dbfce1962"
     },
     {
-      "id": "25930b27",
+      "id": "b703ad0e",
       "cell_type": "markdown",
       "source": "## 7.3 \u56de\u5e30\u5206\u6790",
       "metadata": {}
@@ -112,7 +112,7 @@
         "  geom_pointrange(data = tmp, aes(ymin = -9, ymax = dist),  linetype = \"dotted\") +\n",
         "  geom_pointrange(data = tmp, aes(xmin =  0, xmax = speed), linetype = \"dotted\")"
       ],
-      "id": "684d3313-6336-4bde-b513-497f4ea6b8f0"
+      "id": "02292a5f-c2e2-4a98-9871-1a1e1319ac0a"
     },
     {
       "cell_type": "code",
@@ -124,7 +124,7 @@
         "library(tidyverse)\n",
         "my_data <- cars"
       ],
-      "id": "9ebc113e-9d4a-4bf6-9a1d-9107323f92fa"
+      "id": "55b5d3c4-4fbf-443f-b761-f42fdb489034"
     },
     {
       "cell_type": "code",
@@ -136,7 +136,7 @@
         "                  data = my_data,      # \u30c7\u30fc\u30bf\n",
         "                  method = \"lm\")       # \u624b\u6cd5"
       ],
-      "id": "291e47c0-7128-4b54-8f44-1ec162afe5e5"
+      "id": "4ba87ea7-9c2b-4440-8843-607dff8fc350"
     },
     {
       "cell_type": "code",
@@ -146,7 +146,7 @@
       "source": [
         "coef(my_model$finalModel)"
       ],
-      "id": "ab7f4a20-20a1-478c-940d-d2e6f3a468a1"
+      "id": "dee24ac2-256d-40de-ac5d-2f6bc873a023"
     },
     {
       "cell_type": "code",
@@ -157,7 +157,7 @@
         "tmp <- data.frame(speed = 21.5)\n",
         "my_model %>% predict(tmp)"
       ],
-      "id": "f8103350-5829-4933-ab13-dcef74ceb40d"
+      "id": "6b988b95-9f20-4ebd-8e3c-28d02e7d7191"
     },
     {
       "cell_type": "code",
@@ -167,7 +167,7 @@
       "source": [
         "f <- function(x) { my_model %>% predict(data.frame(speed = x)) }"
       ],
-      "id": "9574c905-d60e-48e2-ac14-bc9521ffdb97"
+      "id": "aaea50de-ca59-4494-8e1f-3c9cc5daf3df"
     },
     {
       "cell_type": "code",
@@ -183,10 +183,10 @@
         "    fun = f,\n",
         "    mapping = aes(color = \"model\"))"
       ],
-      "id": "59679d53-4d60-4fe8-bf75-67c599392359"
+      "id": "82f44cfc-9637-4adc-bbd1-a0544c5a75d1"
     },
     {
-      "id": "7dd40f02",
+      "id": "e5cdf156",
       "cell_type": "markdown",
       "source": "## 7.4 \u5f53\u3066\u306f\u307e\u308a\u306e\u826f\u3055\u306e\u6307\u6a19",
       "metadata": {}
@@ -206,7 +206,7 @@
         "y_ <- my_model %>% predict(my_data)\n",
         "my_data$y_ <- y_"
       ],
-      "id": "1db32006-c7f7-469f-8778-3e92414db69e"
+      "id": "c95b359c-d281-4329-b388-92c24528430d"
     },
     {
       "cell_type": "code",
@@ -217,7 +217,7 @@
         "my_data$residual <- y - y_\n",
         "head(my_data)"
       ],
-      "id": "d17f2565-5295-4098-890c-622fbce9b9a5"
+      "id": "ad4f27ce-7600-4511-beab-0c6f9d11c936"
     },
     {
       "cell_type": "code",
@@ -231,7 +231,7 @@
         "  geom_line(aes(x = speed, y = y_)) +\n",
         "  geom_linerange(mapping = aes(ymin = y_, ymax = dist), linetype = \"dotted\")"
       ],
-      "id": "1c721444-2fdb-43fe-acc8-805085cd3fa1"
+      "id": "0fe41759-b158-41ea-943a-c1f34cc33767"
     },
     {
       "cell_type": "code",
@@ -243,7 +243,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "mean((my_data$residual^2))**0.5\n"
       ],
-      "id": "d564ce22-ec84-4a85-9fa9-e704f1910349"
+      "id": "ffe7b914-b9c1-4cb6-823d-65e18d3382f1"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"traditional\")"
       ],
-      "id": "da7fdcb3-88d6-4ff2-a315-3b9a7684c75d"
+      "id": "c539ad1e-d133-4508-9f4f-dc7961655f89"
     },
     {
       "cell_type": "code",
@@ -267,7 +267,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "summary(my_model$finalModel)$r.squared"
       ],
-      "id": "1559935d-7cd6-402c-b875-ec8eb3cee950"
+      "id": "2bf06bf9-e0b0-49d7-9cc7-bb4371e6a0ac"
     },
     {
       "cell_type": "code",
@@ -285,7 +285,7 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"corr\")"
       ],
-      "id": "ee9850e1-3412-4623-8ebe-bd2e12040c2b"
+      "id": "fcc6147a-a316-412b-a8d2-07b53ef2f273"
     },
     {
       "cell_type": "code",
@@ -299,7 +299,7 @@
         "my_idx <- c(2, 11, 27, 34, 39, 44)\n",
         "my_sample <- my_data[my_idx, ]"
       ],
-      "id": "17208607-e9ef-4d35-87fd-ed0f92fc0ee9"
+      "id": "6b3bd06a-627a-4702-99d8-373c1c3ac1fd"
     },
     {
       "cell_type": "code",
@@ -316,7 +316,7 @@
         "y  <- my_sample$dist\n",
         "y_ <- my_model %>% predict(my_sample)"
       ],
-      "id": "cd006be1-6ef8-43bf-8483-5eb8b9ab5451"
+      "id": "f25b9615-dde2-428e-a936-630e148c8188"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"corr\")"
       ],
-      "id": "6e210a6a-eb12-4c7b-bb03-f3fea07c5a75"
+      "id": "ce921fb1-9f3c-4196-bf8d-533f339ae4cc"
     },
     {
       "cell_type": "code",
@@ -349,10 +349,10 @@
         "  stat_function(fun = f, mapping = aes(color = \"model\")) +\n",
         "  coord_cartesian(ylim = c(0, 120))"
       ],
-      "id": "747524c0-ceb8-4e20-b1ac-4913cc3d9e1b"
+      "id": "7508c1e9-9c35-44ce-8113-05347255085d"
     },
     {
-      "id": "20023dea",
+      "id": "524edb18",
       "cell_type": "markdown",
       "source": "## 7.5 K\u6700\u8fd1\u508d\u6cd5",
       "metadata": {}
@@ -374,7 +374,7 @@
         "# \u53ef\u8996\u5316\u306e\u6e96\u5099\n",
         "f <- function(x) { my_model %>% predict(data.frame(speed = x))}"
       ],
-      "id": "8796ca61-eb42-43f4-89f9-91fa1e3c0f54"
+      "id": "bc5919d5-ddd2-4401-9801-6e360bec65b3"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "    fun = f,\n",
         "    mapping = aes(color = \"model\"))"
       ],
-      "id": "bd8f0dee-2697-4a9a-bc9d-1d55ec9a244c"
+      "id": "0e512543-8e22-485b-8794-037c54222c48"
     },
     {
       "cell_type": "code",
@@ -410,10 +410,10 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"corr\")"
       ],
-      "id": "a34c783d-b9de-4f75-9699-9b3cb616c273"
+      "id": "12fed7f2-89cf-4b05-b0e3-18378f3388d1"
     },
     {
-      "id": "d067ff91",
+      "id": "7aab5b8e",
       "cell_type": "markdown",
       "source": "## 7.6 \u691c\u8a3c",
       "metadata": {}
@@ -431,7 +431,7 @@
         "\n",
         "my_model$results"
       ],
-      "id": "b37887c7-7aaf-489c-84e7-299f3930832d"
+      "id": "60ef003c-2670-4a3b-a301-5fb2132b89c7"
     },
     {
       "cell_type": "code",
@@ -443,7 +443,7 @@
         "                  trControl = trainControl(method = \"cv\", number = 5))\n",
         "my_model$results"
       ],
-      "id": "31d26ee4-8072-4a62-8c2f-92eba5d88ca3"
+      "id": "f2034d26-7649-4778-9f6b-3432e0fc8dce"
     },
     {
       "cell_type": "code",
@@ -455,7 +455,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "my_model$results"
       ],
-      "id": "5d5323af-edcc-4366-ae0b-922463b2b1c7"
+      "id": "d5329b55-f910-4570-9809-929cc2ae6ecd"
     },
     {
       "cell_type": "code",
@@ -467,7 +467,7 @@
         "cl <- makeCluster(detectCores())\n",
         "registerDoParallel(cl)"
       ],
-      "id": "7d866729-d417-4918-b806-374c7adfd458"
+      "id": "1a5899f1-1599-4d49-b174-01cb4128a6ae"
     },
     {
       "cell_type": "code",
@@ -482,7 +482,7 @@
         "y  <- my_data$dist\n",
         "y_ <- my_model %>% predict(my_data)"
       ],
-      "id": "a212dd93-02cf-48a0-9cea-cdf4d5c33d3c"
+      "id": "42ed9476-3ebf-4b78-b84b-e967c5cde8c5"
     },
     {
       "cell_type": "code",
@@ -501,7 +501,7 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"corr\")"
       ],
-      "id": "3cc4b57f-78fc-495e-a9c0-0dd265c5b9d8"
+      "id": "84382a2f-2fef-4cf7-90cc-6153f809db52"
     },
     {
       "cell_type": "code",
@@ -511,7 +511,7 @@
       "source": [
         "postResample(pred = y_, obs = y)"
       ],
-      "id": "0bd7b9b7-1eff-4066-86ba-5c73d7c2c113"
+      "id": "7dcf0613-261c-4613-97b9-1129a3d6746c"
     },
     {
       "cell_type": "code",
@@ -523,7 +523,7 @@
         "my_model$results\n",
         "# \u5de6\u304b\u3089\uff0cRMSE\uff08\u691c\u8a3c\uff09\uff0c\u6c7a\u5b9a\u4fc2\u65706\uff08\u691c\u8a3c\uff09\uff0cMAE\uff08\u691c\u8a3c\uff09"
       ],
-      "id": "01336c9b-2e0e-4fde-9a4b-43665b8b46a3"
+      "id": "b744ddbc-172e-49dc-acca-ec491e44f5af"
     },
     {
       "cell_type": "code",
@@ -542,7 +542,7 @@
         "y_ <- my_model$pred$pred\n",
         "mean((y - y_)^2)**0.5"
       ],
-      "id": "3a8199bc-f7d3-43b7-bb65-fb10401afd10"
+      "id": "d856a892-e62a-4f6d-9dbb-57b29668745f"
     },
     {
       "cell_type": "code",
@@ -552,7 +552,7 @@
       "source": [
         "mean(((y - y_)^2)**0.5)"
       ],
-      "id": "2680991f-5edc-4e33-80b1-0dbe70781a8b"
+      "id": "caf87b0e-51b7-4dbf-8637-c9c91e367031"
     },
     {
       "cell_type": "code",
@@ -571,7 +571,7 @@
         "                      tuneGrid = data.frame(k = 5),\n",
         "                      trControl = trainControl(method = \"LOOCV\"))"
       ],
-      "id": "1910efc6-d1c7-4b7e-8b8d-cb5d45d72e8f"
+      "id": "20bc588b-41da-444f-8cdd-f7da54ba9d6c"
     },
     {
       "cell_type": "code",
@@ -583,7 +583,7 @@
         "\n",
         "my_knn_model$results$RMSE"
       ],
-      "id": "401ebd26-2b0b-4dd6-ba52-4a6ce6efaca9"
+      "id": "7e324e98-f82e-40e1-a883-7e8cc1dd0ce9"
     },
     {
       "cell_type": "code",
@@ -601,7 +601,7 @@
         "\n",
         "head(my_df)"
       ],
-      "id": "aea326de-2440-49f4-9963-9ed03b81743c"
+      "id": "57ec33cd-e544-4058-9a09-4c743c831359"
     },
     {
       "cell_type": "code",
@@ -611,7 +611,7 @@
       "source": [
         "boxplot(my_df, ylab = \"r^2\")"
       ],
-      "id": "004c245d-5abe-483b-9c70-bbac7f476f77"
+      "id": "4ac733df-7013-49a8-84e3-796290ae7867"
     },
     {
       "cell_type": "code",
@@ -624,10 +624,10 @@
         "       paired = TRUE,\n",
         "       alternative = \"two.sided\")\n"
       ],
-      "id": "5a92af75-e2e7-4a25-83fd-54ed5f443afa"
+      "id": "f452bacb-e2f4-461a-8e1a-1fb7cc710f94"
     },
     {
-      "id": "a3eaf788",
+      "id": "9e4a4843",
       "cell_type": "markdown",
       "source": "## 7.7 \u30d1\u30e9\u30e1\u30fc\u30bf\u30c1\u30e5\u30fc\u30cb\u30f3\u30b0",
       "metadata": {}
@@ -644,7 +644,7 @@
         "my_model <- train(form = dist ~ speed, data = my_data, method = \"knn\")\n",
         "my_model$results"
       ],
-      "id": "ea84f0af-3a65-4b76-b239-8c6e030bee8e"
+      "id": "d1d9fdf1-e8c9-4b5a-8acf-09434bcb3f6e"
     },
     {
       "cell_type": "code",
@@ -658,7 +658,7 @@
         "                  tuneGrid = my_params,\n",
         "                  trControl = trainControl(method = \"LOOCV\"))"
       ],
-      "id": "c3d17a53-aacf-4c93-b94a-d913a33f64a1"
+      "id": "682b4853-97eb-4160-bcc0-b72f6bca730f"
     },
     {
       "cell_type": "code",
@@ -668,7 +668,7 @@
       "source": [
         "head(my_model$results)"
       ],
-      "id": "a74dc848-50fc-4ace-adb7-c9d139787a6e"
+      "id": "1d4cfe58-cac3-4c61-bda4-1969c296e650"
     },
     {
       "cell_type": "code",
@@ -678,7 +678,7 @@
       "source": [
         "ggplot(my_model)"
       ],
-      "id": "d5863cb4-b870-4d85-8cdb-d4328ecac3da"
+      "id": "e5401869-0391-4875-8da0-0bfa602362c9"
     },
     {
       "cell_type": "code",
@@ -688,7 +688,7 @@
       "source": [
         "my_model$bestTune"
       ],
-      "id": "625272f5-1707-4668-b6ee-46aad55ba2af"
+      "id": "9450a355-7669-478d-b7c2-711b8d99c0da"
     },
     {
       "cell_type": "code",
@@ -699,7 +699,7 @@
         "my_model$results %>%\n",
         "  filter(RMSE == min(RMSE))"
       ],
-      "id": "58408c3c-c514-44dd-83c1-7786c1d5a2ea"
+      "id": "d620f79b-a028-4467-a323-ab3d12eafa78"
     },
     {
       "cell_type": "code",
@@ -711,7 +711,7 @@
         "y_ <- my_model %>% predict(my_data)\n",
         "RMSE(y_, y)"
       ],
-      "id": "a3d4c468-3b5b-4d2f-bb86-86349c80bdeb"
+      "id": "6701033a-4278-4e66-9709-5a1f66b6635a"
     },
     {
       "cell_type": "code",
@@ -736,7 +736,7 @@
         "\n",
         "my_results <- 1:15 %>% map_dfr(my_loocv)"
       ],
-      "id": "41773566-36db-4344-a88b-ddda367797fd"
+      "id": "c1934f6b-36c7-4ccc-b674-e7154bc7bce4"
     },
     {
       "cell_type": "code",
@@ -753,7 +753,7 @@
         "  theme(legend.position = c(1, 0),\n",
         "        legend.justification = c(1, 0))"
       ],
-      "id": "32120152-1d40-4f3c-80b5-df90e12ae41f"
+      "id": "71a69a26-9484-4a86-8300-2330531b5306"
     }
   ],
   "nbformat": 4,
