--- a/code/R-notebook/r-08.ipynb
+++ b/code/R-notebook/r-08.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "d82fa5dd",
+      "id": "ac4eb21b",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\", \"ggfortify\", \"glmnetUtils\", \"leaps\", \"neuralnet\", \"psych\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "84056e69-8d1a-420b-b5ea-a0e5d20e51d1"
+      "id": "5a73de41-8516-4e47-a3cc-86c2081544b2"
     },
     {
-      "id": "da3189eb",
+      "id": "30ec4473",
       "cell_type": "markdown",
       "source": "## 8.1 \u30d6\u30c9\u30a6\u306e\u751f\u80b2\u6761\u4ef6\u3068\u30ef\u30a4\u30f3\u306e\u4fa1\u683c",
       "metadata": {}
@@ -43,7 +43,7 @@
         "                  nrows = 38)      # \u8aad\u307f\u8fbc\u3080\u884c\u6570\n",
         "psych::describe(tmp)"
       ],
-      "id": "69c68bf3-6256-4b2f-a43d-ab13ca883f36"
+      "id": "81392454-436a-4950-84cc-5e4723455ead"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
         "my_data <- na.omit(tmp[, -c(1, 2)])\n",
         "head(my_data)"
       ],
-      "id": "91247f39-6c5d-40f6-a25c-7995693f88a4"
+      "id": "89294d39-ec81-4c39-a862-47ee616f4d6e"
     },
     {
       "cell_type": "code",
@@ -64,7 +64,7 @@
       "source": [
         "dim(my_data)"
       ],
-      "id": "fcc6e0a5-8fa0-4355-b1d8-9a576d03cef8"
+      "id": "0d769f8f-12b6-4862-beb8-8d26978c03fd"
     },
     {
       "cell_type": "code",
@@ -74,7 +74,7 @@
       "source": [
         "my_data %>% write_csv(\"wine.csv\")"
       ],
-      "id": "87d6848c-3834-4d68-b113-a4a1a9c585ad"
+      "id": "7bfc1cbc-259e-44af-ad88-b40bfe718ee2"
     },
     {
       "cell_type": "code",
@@ -87,10 +87,10 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "my_data <- read_csv(my_url)"
       ],
-      "id": "8cf1601e-6c7c-4734-bb72-03e6e2e63463"
+      "id": "a8c9ee21-2c9c-4a86-a609-ce5941e0febe"
     },
     {
-      "id": "17feace7",
+      "id": "c538d4ac",
       "cell_type": "markdown",
       "source": "## 8.2 \u91cd\u56de\u5e30\u5206\u6790",
       "metadata": {}
@@ -112,7 +112,7 @@
         "                  method = \"lm\",\n",
         "                  trControl = trainControl(method = \"LOOCV\"))"
       ],
-      "id": "3ad9e8d5-ebb2-4ac5-bbdf-76f2bc595986"
+      "id": "888973e2-c0dc-4dd1-a384-9073e7f69c52"
     },
     {
       "cell_type": "code",
@@ -123,7 +123,7 @@
         "coef(my_model$finalModel) %>%\n",
         "  as.data.frame"
       ],
-      "id": "ff6061cd-8323-42f5-a342-35f4559dfe94"
+      "id": "6da1d96d-d7aa-4ee8-8bb0-39f1f7459840"
     },
     {
       "cell_type": "code",
@@ -136,7 +136,7 @@
         "  HRAIN = 120, TIME_SV = 2)\n",
         "my_model %>% predict(my_test)"
       ],
-      "id": "49bd38a5-d2f4-432e-9bd8-68fe485df0c8"
+      "id": "5102882c-e7f5-46ae-a30b-a70a66c73186"
     },
     {
       "cell_type": "code",
@@ -155,7 +155,7 @@
         "R2(pred = y_, obs = y,\n",
         "   form = \"corr\")"
       ],
-      "id": "87a91032-49dc-4700-839a-58f70f89ec88"
+      "id": "65cd6dae-04a8-4c86-805f-ad521b6f1c0b"
     },
     {
       "cell_type": "code",
@@ -165,7 +165,7 @@
       "source": [
         "my_model$results"
       ],
-      "id": "7ab1830f-e5c1-4651-808c-f718bd29e2fb"
+      "id": "135250c8-08e8-4f9c-99c1-57781a3ed2f6"
     },
     {
       "cell_type": "code",
@@ -179,10 +179,10 @@
         "matrix(b,\n",
         "       dimnames = list(colnames(M)))"
       ],
-      "id": "8b18faef-ee10-4782-b2c2-65e688b04efa"
+      "id": "78698fc8-5674-4d9a-bcfa-bd45fe70ed73"
     },
     {
-      "id": "04e05dd4",
+      "id": "a1224d09",
       "cell_type": "markdown",
       "source": "## 8.3 \u6a19\u6e96\u5316",
       "metadata": {}
@@ -207,7 +207,7 @@
         "  stat_summary(fun = mean, geom = \"point\", size = 3) +\n",
         "  xlab(NULL)"
       ],
-      "id": "599f61e1-4483-4876-92b4-9f0ee795f77b"
+      "id": "bfc57fdf-24a6-43f1-b573-620358dcb0d2"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "  method = \"lm\",\n",
         "  preProcess = c(\"center\", \"scale\"))"
       ],
-      "id": "159d7a0e-7270-4f22-97cf-c956dcf5c3bf"
+      "id": "b74875ea-d5bd-4ed5-932a-e9bc1afe8520"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
         "coef(my_model$finalModel) %>%\n",
         "  as.data.frame"
       ],
-      "id": "ebd65f4a-89ba-4419-948f-2ac63416e951"
+      "id": "24d946fc-bdb1-4189-a35a-e92d73b6bc98"
     },
     {
       "cell_type": "code",
@@ -245,10 +245,10 @@
         "  HRAIN = 120, TIME_SV = 2)\n",
         "my_model %>% predict(my_test)"
       ],
-      "id": "d5600202-6679-421e-a359-51e963e77dc1"
+      "id": "0d2a8f70-3f0b-49fa-90cc-f4a85d5521cf"
     },
     {
-      "id": "227df880",
+      "id": "d24dc917",
       "cell_type": "markdown",
       "source": "## 8.4 \u5165\u529b\u5909\u6570\u306e\u6570\u3068\u30e2\u30c7\u30eb\u306e\u826f\u3055",
       "metadata": {}
@@ -270,7 +270,7 @@
         "                               v2 = 0:(n - 1) %% 3)\n",
         "head(my_data2)"
       ],
-      "id": "c08b28a2-09be-4a28-9adb-f895ae4c1c1a"
+      "id": "34770a93-11fb-41a0-9356-aea8eba01fcc"
     },
     {
       "cell_type": "code",
@@ -287,10 +287,10 @@
         "\n",
         "my_model2$results$RMSE"
       ],
-      "id": "28be962e-9a84-4254-b014-3f373f1196a0"
+      "id": "53ba9f36-95fa-4e54-8d2b-111a59ce7d31"
     },
     {
-      "id": "0722c836",
+      "id": "6c00b804",
       "cell_type": "markdown",
       "source": "## 8.5 \u5909\u6570\u9078\u629e",
       "metadata": {}
@@ -310,7 +310,7 @@
         "my_data2 <- my_data %>% mutate(v1 = 0:(n - 1) %% 2,\n",
         "                               v2 = 0:(n - 1) %% 3)"
       ],
-      "id": "b57de714-2e09-40b2-b43d-3d7f3111818e"
+      "id": "ac33ed65-6da4-41e7-a294-69567312c829"
     },
     {
       "cell_type": "code",
@@ -325,10 +325,10 @@
         "                  tuneGrid = data.frame(nvmax = 1:6)) # \u9078\u629e\u3059\u308b\u5909\u6570\u306e\u4e0a\u9650\n",
         "summary(my_model$finalModel)$outmat"
       ],
-      "id": "891a95f0-5fc6-4199-8ac7-37466d6b5c73"
+      "id": "ebaa5ee3-8504-4353-8b3c-da08a7aeb27e"
     },
     {
-      "id": "5813f95a",
+      "id": "3b8d7a75",
       "cell_type": "markdown",
       "source": "## 8.6 \u88dc\u8db3\uff1a\u6b63\u5247\u5316",
       "metadata": {}
@@ -345,7 +345,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "my_data <- read_csv(my_url)"
       ],
-      "id": "e262d223-a3e6-4b16-af6a-de693fc1c084"
+      "id": "3e3080a3-259e-4881-88c2-adcb04a07673"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "    lambda = A,\n",
         "    alpha = B))"
       ],
-      "id": "80f15665-8917-4815-bca8-2c7cb9ac3ee0"
+      "id": "543be2b4-50a0-42b9-8357-1720150c8bfd"
     },
     {
       "cell_type": "code",
@@ -375,7 +375,7 @@
       "source": [
         "coef(my_model$finalModel, A)"
       ],
-      "id": "87821712-296e-4286-a677-c6ebe9dee5dc"
+      "id": "27c3d69b-4e73-438e-9eba-129e2f9fdb6f"
     },
     {
       "cell_type": "code",
@@ -388,7 +388,7 @@
         "  HRAIN = 120, TIME_SV = 2)\n",
         "my_model %>% predict(my_test)"
       ],
-      "id": "e69e79c7-4163-463b-bd13-3813592e53e2"
+      "id": "2e2405e8-36ad-4cb5-9e5e-e78bafeccf00"
     },
     {
       "cell_type": "code",
@@ -412,7 +412,7 @@
         "  xlab(\"log A ( = log lambda)\") +\n",
         "  theme(legend.position = c(0.15, 0.25))"
       ],
-      "id": "34c60761-babb-4492-8c96-7c52a867f159"
+      "id": "9dfd8997-1818-4ba7-aef6-721702417ab3"
     },
     {
       "cell_type": "code",
@@ -430,7 +430,7 @@
         "\n",
         "my_model$bestTune"
       ],
-      "id": "1d245154-44d1-466a-9c9c-6ec20cc45d9c"
+      "id": "dbaa9837-157c-4efe-9fcf-3c019b5ece76"
     },
     {
       "cell_type": "code",
@@ -444,7 +444,7 @@
         "  xlab(\"A ( = lambda)\") +\n",
         "  guides(shape = guide_legend(tmp), color = guide_legend(tmp))"
       ],
-      "id": "a41cd6fe-8579-42f3-9fa9-5312bf34b5b2"
+      "id": "ef4baa00-9de8-496f-8b8a-746a3d92d065"
     },
     {
       "cell_type": "code",
@@ -455,10 +455,10 @@
         "my_model$results %>%\n",
         "  filter(RMSE == min(RMSE))"
       ],
-      "id": "4c630ff0-8310-4047-8067-cd62ec8e99a5"
+      "id": "ff97f4a2-913b-4439-991e-ff4f91d7525f"
     },
     {
-      "id": "277f70d7",
+      "id": "68c992be",
       "cell_type": "markdown",
       "source": "## 8.7 \u30cb\u30e5\u30fc\u30e9\u30eb\u30cd\u30c3\u30c8\u30ef\u30fc\u30af",
       "metadata": {}
@@ -471,7 +471,7 @@
       "source": [
         "curve(1 / (1 + exp(-x)), -6, 6)"
       ],
-      "id": "dbfcfa65-2848-4700-a074-ce326ec18ed0"
+      "id": "e89351a0-9486-43ab-a2e0-ce9be7bc3d74"
     },
     {
       "cell_type": "code",
@@ -485,7 +485,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "my_data <- read_csv(my_url)"
       ],
-      "id": "23355389-29c9-44d5-a6a4-b3046965f6c6"
+      "id": "ff2f6c34-7962-4159-94aa-c0118147c721"
     },
     {
       "cell_type": "code",
@@ -500,7 +500,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "plot(my_model$finalModel) # \u8a13\u7df4\u6e08\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u63cf\u753b"
       ],
-      "id": "b081bbf7-4801-4504-a5b5-cc63a1a6da08"
+      "id": "1c14f6f0-1798-4d43-94be-412ba3d207cb"
     },
     {
       "cell_type": "code",
@@ -510,7 +510,7 @@
       "source": [
         "my_model$results"
       ],
-      "id": "e9b37013-c09c-46ab-a554-63a15ff210f1"
+      "id": "b2b281c2-9081-4ff1-bad2-d3f88b979875"
     },
     {
       "cell_type": "code",
@@ -528,7 +528,7 @@
         "                         layer2 = 0:2,\n",
         "                         layer3 = 0))"
       ],
-      "id": "4269cc32-13da-45fd-980a-c74486d1a4e4"
+      "id": "4b4d4851-ab98-44df-a8b5-5be0319d0001"
     },
     {
       "cell_type": "code",
@@ -539,7 +539,7 @@
         "my_model$results %>%\n",
         "  filter(RMSE == min(RMSE))"
       ],
-      "id": "d4a1580c-ef24-46ca-9626-f3b45514adf8"
+      "id": "31d0f599-09f1-4be6-a005-780b3b75442d"
     }
   ],
   "nbformat": 4,
