--- a/code/R-notebook/r-09.ipynb
+++ b/code/R-notebook/r-09.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "afd0574d",
+      "id": "aa85cbe4",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\", \"furrr\", \"psych\", \"randomForest\", \"rpart.plot\", \"xgboost\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "1a1925dc-09e4-4781-a449-374f799ae753"
+      "id": "8809261c-2c85-49c2-ae0f-a84751194bfa"
     },
     {
-      "id": "cc6d8515",
+      "id": "1918dc26",
       "cell_type": "markdown",
       "source": "## 9.1 \u30a2\u30e4\u30e1\u306e\u30c7\u30fc\u30bf",
       "metadata": {}
@@ -37,7 +37,7 @@
         "my_data <- iris\n",
         "head(my_data)"
       ],
-      "id": "563f0746-b3b8-49c9-81c2-8b7dc8466431"
+      "id": "2f976898-2621-4f4c-a541-3fb99d1d8446"
     },
     {
       "cell_type": "code",
@@ -47,10 +47,10 @@
       "source": [
         "psych::describe(my_data)"
       ],
-      "id": "811353ad-58af-4468-bf66-8fdb453b8059"
+      "id": "39ba5974-8069-4e9f-a376-7c00efb58194"
     },
     {
-      "id": "f1d1da00",
+      "id": "ae3c841b",
       "cell_type": "markdown",
       "source": "## 9.2 \u6728\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -66,7 +66,7 @@
         "my_data <- iris\n",
         "my_model <- train(form = Species ~ ., data = my_data, method = \"rpart\")"
       ],
-      "id": "819b2848-55ce-4836-a5a4-67491835b340"
+      "id": "ee8fabfe-f443-4c5d-9643-d787680d8de1"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "rpart.plot::rpart.plot(my_model$finalModel, extra = 1)"
       ],
-      "id": "efd8e164-62ba-4225-b9f2-0940d92171c4"
+      "id": "002b9e74-03f9-4c5a-9229-2c44d74dca74"
     },
     {
       "cell_type": "code",
@@ -91,7 +91,7 @@
         "\n",
         "my_model %>% predict(my_test)"
       ],
-      "id": "04343834-ee37-44ec-8bc2-161740d02237"
+      "id": "5ca3d4cf-8135-4875-8433-e9bc797c46d2"
     },
     {
       "cell_type": "code",
@@ -102,10 +102,10 @@
         "my_model %>% predict(my_test,\n",
         "                     type = \"prob\")"
       ],
-      "id": "f7e3fa9a-393b-4719-b7aa-bd66b05848b4"
+      "id": "bf878ad9-07f7-4018-b9a8-157370073b75"
     },
     {
-      "id": "f881dc42",
+      "id": "5d58d31f",
       "cell_type": "markdown",
       "source": "## 9.3 \u6b63\u89e3\u7387",
       "metadata": {}
@@ -126,7 +126,7 @@
         "confusionMatrix(data = y_, reference = y)\n",
         "# \u4ee5\u4e0b\u306f\u5272\u611b"
       ],
-      "id": "721a3eec-ad4f-4fbf-9628-84d12d7c9763"
+      "id": "ef368f17-65fd-4082-908d-4636002186c7"
     },
     {
       "cell_type": "code",
@@ -138,7 +138,7 @@
         "y_ <- my_model %>% predict(my_data)\n",
         "mean(y_ == y)"
       ],
-      "id": "4fa9dae8-dc38-42fc-bb04-a57f14c064ef"
+      "id": "328e9cf8-8033-4527-9b51-dd4a1bf216b7"
     },
     {
       "cell_type": "code",
@@ -150,7 +150,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "my_model$results"
       ],
-      "id": "8fe07f3c-2cfc-4924-b41f-fee375ffa723"
+      "id": "70fbae42-778a-415f-97fa-a26dc6337a2c"
     },
     {
       "cell_type": "code",
@@ -163,7 +163,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "my_model$results %>% filter(Accuracy == max(Accuracy))"
       ],
-      "id": "679906c5-9e68-47f9-a0d8-0f591d207896"
+      "id": "5de1ad36-5219-438a-849c-90d6d3ef54be"
     },
     {
       "cell_type": "code",
@@ -185,7 +185,7 @@
         "       Accuracy = my_model$results$Accuracy)\n",
         "}"
       ],
-      "id": "d486b575-d751-4d1a-8715-89b7ce7a649f"
+      "id": "b5c24593-b391-4399-997b-d0d285e2cde7"
     },
     {
       "cell_type": "code",
@@ -205,7 +205,7 @@
         "\n",
         "my_results %>% filter(Accuracy == max(Accuracy)) # \u6b63\u89e3\u7387\uff08\u691c\u8a3c\uff09\u306e\u6700\u5927\u5024"
       ],
-      "id": "74b04e15-cd8d-41df-9f0f-425a469979e4"
+      "id": "1cd224fe-61c6-425e-a3dd-80aa32435284"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "                                                 minbucket = 5,\n",
         "                                                 minsplit = 2))"
       ],
-      "id": "be1c78d1-e789-44e2-bbb7-30e25ab71ad8"
+      "id": "44498242-d6d4-4a8e-8bc3-a3956ff5665a"
     },
     {
       "cell_type": "code",
@@ -231,10 +231,10 @@
         "rpart.plot::rpart.plot(\n",
         "  my_model$finalModel, extra = 1)"
       ],
-      "id": "9b1fbaf0-7b9f-4ffd-b397-93bd4aef8b8b"
+      "id": "5ef3e70c-a353-4cfe-8551-6d0a73e3430b"
     },
     {
-      "id": "3ddede55",
+      "id": "3a8c23af",
       "cell_type": "markdown",
       "source": "## 9.4 \u8907\u6570\u306e\u6728\u3092\u4f7f\u3046\u65b9\u6cd5",
       "metadata": {}
@@ -254,7 +254,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "my_model$results"
       ],
-      "id": "3e39b749-a1f6-433f-a356-796db3f5237b"
+      "id": "314ad3ae-88f1-447d-906c-4d31e32141a8"
     },
     {
       "cell_type": "code",
@@ -275,7 +275,7 @@
         "  trControl = trainControl(method = \"cv\", number = 5)) # 5\u5206\u5272\u4ea4\u5dee\u691c\u8a3c\n",
         "my_model$results %>% filter(Accuracy == max(Accuracy)) %>% head(5) %>% t"
       ],
-      "id": "ba180cc6-f492-47f8-818b-e9e6562f8a1a"
+      "id": "b54f6def-0c2e-4ea8-a3bf-a21b4c8ee70c"
     },
     {
       "cell_type": "code",
@@ -286,10 +286,10 @@
         "my_model <- train(form = Species ~ ., data = my_data, method = \"rf\")\n",
         "ggplot(varImp(my_model))"
       ],
-      "id": "f65aed92-2f99-4e86-a6c5-185c18736014"
+      "id": "01a4fa0f-5821-4aab-9772-6edb749341ac"
     },
     {
-      "id": "5261eed7",
+      "id": "81c3d211",
       "cell_type": "markdown",
       "source": "## 9.5 \u6b20\u640d\u306e\u3042\u308b\u30c7\u30fc\u30bf\u3067\u306e\u5b66\u7fd2",
       "metadata": {}
@@ -310,7 +310,7 @@
         "\n",
         "psych::describe(my_data) # n\u306e\u5024\u304c135\u306e\u5909\u6570\u306b\uff0c150 - 135 = 15\u500b\u306e\u6b20\u640d\u304c\u3042\u308b\uff0e"
       ],
-      "id": "3388cbc7-0dfa-48a8-9681-704d60a9bf0e"
+      "id": "cc25172b-3f09-4ffb-9e50-3cafe6d86f6c"
     },
     {
       "cell_type": "code",
@@ -328,7 +328,7 @@
         "                                 minbucket = 1)) # \u7d42\u7aef\u30ce\u30fc\u30c9\u306e\u6761\u4ef6\n",
         "max(my_model$results$Accuracy)"
       ],
-      "id": "060cf04b-26df-4eec-9a03-00e6d52aa679"
+      "id": "0a0b4e44-e8d3-4654-ac18-e2d41200a29e"
     },
     {
       "cell_type": "code",
@@ -341,10 +341,10 @@
         "                  trControl = trainControl(method = \"cv\", number = 5))\n",
         "max(my_model$results$Accuracy)"
       ],
-      "id": "1d812848-4900-49e2-ac14-7cb4cfbd972b"
+      "id": "4773f485-3b4b-47d9-9e77-344f6e04db39"
     },
     {
-      "id": "9ae2bd7c",
+      "id": "36373fa8",
       "cell_type": "markdown",
       "source": "## 9.6 \u4ed6\u306e\u5206\u985e\u624b\u6cd5",
       "metadata": {}
@@ -363,7 +363,7 @@
         "                  trControl = trainControl(method = \"LOOCV\"))\n",
         "my_model$results %>% filter(Accuracy == max(Accuracy))"
       ],
-      "id": "7620f64d-782a-4595-b4c5-e45f3e7f124d"
+      "id": "4b1d131c-f1c3-43b6-9c4c-59dc0116810e"
     },
     {
       "cell_type": "code",
@@ -381,7 +381,7 @@
         "                  trace = FALSE) # \u9014\u4e2d\u7d4c\u904e\u3092\u8868\u793a\u3057\u306a\u3044\n",
         "my_model$results %>% filter(Accuracy == max(Accuracy))"
       ],
-      "id": "ea0c1607-d6f6-499c-a855-697295ded4f1"
+      "id": "4b42953a-f9da-4a7f-8c36-ea6ce538136c"
     }
   ],
   "nbformat": 4,
