--- a/code/R-notebook/r-10.ipynb
+++ b/code/R-notebook/r-10.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "6fb7cc19",
+      "id": "c64213b8",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\", \"PRROC\", \"rpart.plot\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "6b837735-ec05-4ac1-b5da-004f3c2b640c"
+      "id": "f457b8c5-d276-4f50-8309-a26c6ce996ee"
     },
     {
-      "id": "db3245d3",
+      "id": "7eb7cd67",
       "cell_type": "markdown",
       "source": "## 10.1 2\u5024\u5206\u985e\u306e\u6027\u80fd\u6307\u6a19",
       "metadata": {}
@@ -37,7 +37,7 @@
         "y       <- c(  0,   1,   1,   0,   1,   0,    1,   0,   0,   1)\n",
         "y_score <- c(0.7, 0.8, 0.3, 0.4, 0.9, 0.6, 0.99, 0.1, 0.2, 0.5)"
       ],
-      "id": "c91ece22-ac80-479a-804d-5edf1dc5e448"
+      "id": "7e7b2218-27e3-4bf3-98f1-d28acc5e9916"
     },
     {
       "cell_type": "code",
@@ -48,7 +48,7 @@
         "y_ <- ifelse(0.5 <= y_score, 1, 0)\n",
         "y_"
       ],
-      "id": "4a414750-9a2d-4301-a352-f5f009ae0f23"
+      "id": "66520117-866c-40ac-8158-b8d336350b58"
     },
     {
       "cell_type": "code",
@@ -62,10 +62,10 @@
         "                positive = \"1\",            # \u300c1\u300d\u3092\u967d\u6027\u3068\u3059\u308b\uff0e\n",
         "                mode = \"everything\")       # \u5168\u3066\u306e\u6307\u6a19\u3092\u6c42\u3081\u308b\uff0e"
       ],
-      "id": "20f8d821-d3cb-4f61-8df5-263b1e5fa177"
+      "id": "5fd47a96-3e9f-4d5e-af7e-7cb13d3b8548"
     },
     {
-      "id": "982f4017",
+      "id": "f20197a5",
       "cell_type": "markdown",
       "source": "## 10.2 \u30c8\u30ec\u30fc\u30c9\u30aa\u30d5",
       "metadata": {}
@@ -86,7 +86,7 @@
         "c(sum((y == 0) & (y_ == 1)) / sum(y == 0), # FPR\n",
         "  sum((y == 1) & (y_ == 1)) / sum(y == 1)) # TPR"
       ],
-      "id": "df2f315d-9044-4760-b59d-5b2e39ffef75"
+      "id": "fc9cdfc3-3909-4cd7-814a-bc14355e7fca"
     },
     {
       "cell_type": "code",
@@ -101,7 +101,7 @@
         "                ylab = \"True Positive Rate\",\n",
         "                legend = FALSE)"
       ],
-      "id": "76c27728-072f-4559-a7d9-befcabc3d27c"
+      "id": "57b81618-e7f7-43b1-97ef-31aed720b228"
     },
     {
       "cell_type": "code",
@@ -111,7 +111,7 @@
       "source": [
         "my_roc$auc"
       ],
-      "id": "b42df181-56af-481a-97cd-1adbe633d8cf"
+      "id": "7940a253-e1d6-4930-bc81-b4755bca788a"
     },
     {
       "cell_type": "code",
@@ -122,7 +122,7 @@
         "c(sum((y == 1) & (y_ == 1)) / sum(y  == 1), # Recall == TPR\n",
         "  sum((y == 1) & (y_ == 1)) / sum(y_ == 1)) # Precision"
       ],
-      "id": "b761562c-8ee8-446d-8280-28deeba5f432"
+      "id": "90452c5b-97a5-4f72-b6c1-d4c4bb413e86"
     },
     {
       "cell_type": "code",
@@ -137,7 +137,7 @@
         "               ylab = \"Precision\",\n",
         "               legend = FALSE)"
       ],
-      "id": "804b29c3-200e-4e6f-abe6-710e9b808eec"
+      "id": "5d13c800-d9ce-4b79-978a-8992c0ae562b"
     },
     {
       "cell_type": "code",
@@ -147,10 +147,10 @@
       "source": [
         "my_pr$auc.integral"
       ],
-      "id": "3a80795c-2f4a-4fff-9491-6d19206126d3"
+      "id": "0bdc76c4-eee5-408b-8580-e57be72c99e6"
     },
     {
-      "id": "4d42fad7",
+      "id": "fe19608d",
       "cell_type": "markdown",
       "source": "## 10.3 \u30bf\u30a4\u30bf\u30cb\u30c3\u30af",
       "metadata": {}
@@ -169,7 +169,7 @@
         "                \"/fromzero/master/data/titanic.csv\")\n",
         "my_data <- read_csv(my_url)"
       ],
-      "id": "4e4f190f-16b6-49ed-b935-d3b3182990f0"
+      "id": "e65b15a6-a0ef-44b4-ba82-32a934c24473"
     },
     {
       "cell_type": "code",
@@ -179,7 +179,7 @@
       "source": [
         "head(my_data)"
       ],
-      "id": "04b1e35d-cae4-47e7-a9c0-0fbe55c7b0f4"
+      "id": "7efca097-2929-45be-8c7b-730fd95da8e1"
     },
     {
       "cell_type": "code",
@@ -191,7 +191,7 @@
         "                  tuneGrid = data.frame(maxdepth = 2),\n",
         "                  trControl = trainControl(method = \"LOOCV\"))"
       ],
-      "id": "e97e2f67-e288-47bd-adf9-8b06330ab3f0"
+      "id": "fc9b5da5-311d-452d-afeb-569f6e2508f9"
     },
     {
       "cell_type": "code",
@@ -201,7 +201,7 @@
       "source": [
         "rpart.plot::rpart.plot(my_model$finalModel, extra = 1)"
       ],
-      "id": "07e123f0-62b5-490e-9860-08bd646af339"
+      "id": "36f4fd64-94d9-4db5-8077-5b58bc478ae5"
     },
     {
       "cell_type": "code",
@@ -211,7 +211,7 @@
       "source": [
         "my_model$results"
       ],
-      "id": "6729fb08-62fa-460a-bcd1-273e3b075be0"
+      "id": "fe5319ac-67d3-4aa3-b8fb-5732bcf6e7bf"
     },
     {
       "cell_type": "code",
@@ -232,7 +232,7 @@
         "                ylab = \"True Positive Rate\",\n",
         "                legend = FALSE)"
       ],
-      "id": "ca201b52-eace-41d3-87f6-8e2eb7d1fcee"
+      "id": "76d7bdbf-d0d0-422d-ba05-08b43b9784dc"
     },
     {
       "cell_type": "code",
@@ -252,7 +252,7 @@
         "rpart.plot::rpart.plot(my_model1$finalModel, extra = 1)\n",
         "my_model1$results"
       ],
-      "id": "e4e27f51-5aab-4017-867e-7a6df42e66f9"
+      "id": "064d905e-c3d1-4073-95a4-bb597ba4a521"
     },
     {
       "cell_type": "code",
@@ -272,7 +272,7 @@
         "rpart.plot::rpart.plot(my_model2$finalModel, extra = 1)\n",
         "my_model2$results"
       ],
-      "id": "f82315e9-1ddf-478c-a527-55318bbdc748"
+      "id": "2eb423a8-144b-4701-a222-54ff62d8efff"
     },
     {
       "cell_type": "code",
@@ -286,10 +286,10 @@
         "rpart.plot::rpart.plot(my_model3$finalModel, extra = 1)\n",
         "my_model3$results"
       ],
-      "id": "0f054bb0-5787-44d9-8a14-0ffeee9415ae"
+      "id": "9dac363c-909f-4434-839b-35b6d91c528e"
     },
     {
-      "id": "3ce1fecd",
+      "id": "f3d89923",
       "cell_type": "markdown",
       "source": "## 10.4 \u30ed\u30b8\u30b9\u30c6\u30a3\u30c3\u30af\u56de\u5e30",
       "metadata": {}
@@ -302,7 +302,7 @@
       "source": [
         "curve(1 / (1 + exp(-x)), -6, 6)"
       ],
-      "id": "f0c97777-8a32-4c1f-a42b-c85f6a24f0d8"
+      "id": "64652886-a958-4b08-b736-33432eddd605"
     },
     {
       "cell_type": "code",
@@ -321,7 +321,7 @@
         "my_model <- train(form = Survived ~ ., data = my_data, method = \"glm\",\n",
         "                  trControl = trainControl(method = \"LOOCV\"))"
       ],
-      "id": "cbbbdd0c-532f-409f-a2cc-a030c7f71858"
+      "id": "3d6af33a-d5b7-4d1a-b811-a4d81b921038"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
         "coef(my_model$finalModel) %>%\n",
         "  as.data.frame"
       ],
-      "id": "2c8ba72f-e31d-4193-81fd-111d819117af"
+      "id": "bc695274-3fb5-442d-8025-b05e65c39918"
     },
     {
       "cell_type": "code",
@@ -342,7 +342,7 @@
       "source": [
         "my_model$results"
       ],
-      "id": "eb9614d1-be73-4f52-ae7a-83d17a1619e0"
+      "id": "e11c0221-13d9-44a0-92a0-36e6580ebe02"
     }
   ],
   "nbformat": 4,
