--- a/code/R-notebook/r-11.ipynb
+++ b/code/R-notebook/r-11.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "8d19e3ab",
+      "id": "ff852294",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
-        "  packages_to_install <- c(\"h2o\", \"keras\")\n",
+        "  packages_to_install <- c(\"h2o\", \"keras3\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "65424a07-b61d-4453-87e0-c7e9bcf86214"
+      "id": "daa8a5a9-3911-4aa8-8101-ca1204c84477"
     },
     {
-      "id": "edb75b9d",
+      "id": "b0a909a0",
       "cell_type": "markdown",
       "source": "## 11.1 Keras\u306b\u3088\u308b\u56de\u5e30",
       "metadata": {}
@@ -34,13 +34,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "library(keras)\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
+        "  library(keras3)\n",
+        "} else {\n",
+        "  library(keras)\n",
+        "}\n",
         "library(tidyverse)\n",
         "my_url <- str_c(\"https://raw.githubusercontent.com/taroyabuki\",\n",
         "                \"/fromzero/master/data/wine.csv\")\n",
         "tmp <- read_csv(my_url)"
       ],
-      "id": "eca1f03f-4ff9-4e67-b04f-d90a913b3726"
+      "id": "f447fe2b-4e52-4850-befb-ffdb15ee2eae"
     },
     {
       "cell_type": "code",
@@ -50,7 +54,7 @@
       "source": [
         "my_data <- tmp[sample(nrow(tmp)), ]"
       ],
-      "id": "a2a5d7a9-26a7-421a-8b0d-3338cac78677"
+      "id": "fdd9352a-3feb-4572-b1d5-c1a00a197f74"
     },
     {
       "cell_type": "code",
@@ -62,7 +66,7 @@
         "  select(-LPRICE2) %>% scale\n",
         "y <- my_data$LPRICE2"
       ],
-      "id": "eeb9fda2-2d0b-49c0-a40c-bbe71c4f4fd9"
+      "id": "7355e2dc-44b5-43f5-96e9-2ee3e50387f5"
     },
     {
       "cell_type": "code",
@@ -72,7 +76,7 @@
       "source": [
         "curve(activation_relu(x), -3, 3)"
       ],
-      "id": "1302e79c-6174-4a9d-8b75-ccff79d3d849"
+      "id": "147fa36c-146d-4ab0-88b6-adca4a125acb"
     },
     {
       "cell_type": "code",
@@ -87,7 +91,7 @@
         "summary(my_model) # \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u6982\u8981\n",
         "# \u5272\u611b\uff08Python\u306e\u7d50\u679c\u3092\u53c2\u7167\uff09"
       ],
-      "id": "e06a9d70-c9ef-457f-83e6-2fa50ad5b413"
+      "id": "c0af1438-36e6-41f2-bff4-816802604f7f"
     },
     {
       "cell_type": "code",
@@ -99,7 +103,7 @@
         "  loss = \"mse\",\n",
         "  optimizer = \"rmsprop\")"
       ],
-      "id": "d8bab787-32a7-4b23-be30-72233c265f42"
+      "id": "e0378cd7-66e1-46c8-8ac2-61e2f5c6e355"
     },
     {
       "cell_type": "code",
@@ -111,7 +115,7 @@
         "  patience = 20,\n",
         "  restore_best_weights = TRUE)"
       ],
-      "id": "09f84c4d-1b71-4705-a18b-04dd90378b7c"
+      "id": "59ea439b-5685-4f3f-a832-2ccc565af634"
     },
     {
       "cell_type": "code",
@@ -128,7 +132,7 @@
         "    callbacks = list(my_cb),\n",
         "    verbose = 0)"
       ],
-      "id": "00f60be4-44d1-46e9-9789-bb5c7d8d36a6"
+      "id": "39fa2bef-8de6-475a-9aaf-645f4c2346f8"
     },
     {
       "cell_type": "code",
@@ -138,7 +142,7 @@
       "source": [
         "plot(my_history)"
       ],
-      "id": "12c75db0-608b-42b0-a5bf-9d39f3b2b371"
+      "id": "9fe6a7b8-92b0-4958-a768-a7e4af299937"
     },
     {
       "cell_type": "code",
@@ -148,7 +152,7 @@
       "source": [
         "my_history"
       ],
-      "id": "9f4db232-edb4-4773-8d23-04e66099e05e"
+      "id": "1fae91c2-585c-4856-8ca5-0eb693ec3b64"
     },
     {
       "cell_type": "code",
@@ -159,10 +163,10 @@
         "y_ <- my_model %>% predict(X)\n",
         "mean((y_ - y)^2)**0.5"
       ],
-      "id": "a16b842c-b71a-403f-a89f-627e03a7ffeb"
+      "id": "c2118759-731f-4162-8bf4-92f0bd928620"
     },
     {
-      "id": "dc6b4e49",
+      "id": "247b4dd3",
       "cell_type": "markdown",
       "source": "## 11.2 Keras\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -173,11 +177,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "library(keras)\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
+        "  library(keras3)\n",
+        "} else {\n",
+        "  library(keras)\n",
+        "}\n",
         "library(tidyverse)\n",
         "my_data <- iris[sample(nrow(iris)), ]"
       ],
-      "id": "4e7fd07a-9eb0-47bc-803a-55664171b93e"
+      "id": "0bc11ae0-8e75-49af-ad16-62ff1ceefc58"
     },
     {
       "cell_type": "code",
@@ -189,7 +197,7 @@
         "  select(-Species) %>% scale\n",
         "y <- as.integer(my_data$Species) - 1"
       ],
-      "id": "ed0a071b-9e2a-49d6-b759-3caa06bec94a"
+      "id": "54e63eb5-75c6-4c1f-a5d7-99a08c2e84b8"
     },
     {
       "cell_type": "code",
@@ -201,7 +209,7 @@
         "  layer_dense(units = 3, activation = \"relu\", input_shape = c(4)) %>%\n",
         "  layer_dense(units = 3, activation = \"softmax\")"
       ],
-      "id": "7abd6953-eeb7-425a-83c0-69a909ba337f"
+      "id": "9d688872-3557-4545-81ba-de13ad796bb2"
     },
     {
       "cell_type": "code",
@@ -213,7 +221,7 @@
         "                     optimizer = \"rmsprop\",\n",
         "                     metrics = c(\"accuracy\"))"
       ],
-      "id": "cea8b023-6a09-4724-aad4-16919183d145"
+      "id": "531ee6a6-b061-495b-bf05-4df9212d0972"
     },
     {
       "cell_type": "code",
@@ -236,7 +244,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "1b5c3cf7-5d7c-4773-9432-aee7d3924fcb"
+      "id": "091a357d-5f0b-47ae-acea-5aa8ab54a53f"
     },
     {
       "cell_type": "code",
@@ -246,7 +254,7 @@
       "source": [
         "my_history"
       ],
-      "id": "394668bd-b44d-448b-a219-b61583d5232f"
+      "id": "c3373450-b32b-4856-bd49-8eccec0cfa4a"
     },
     {
       "cell_type": "code",
@@ -258,7 +266,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "mean(y_ == y)"
       ],
-      "id": "1a881596-901e-4530-aaeb-605c4f6496d4"
+      "id": "94e24440-348e-400c-8299-e158245ba496"
     },
     {
       "cell_type": "code",
@@ -270,7 +278,7 @@
         "\n",
         "-mean(log(c(0.7, 0.6, 0.2, 0.7)))"
       ],
-      "id": "150470e7-a31e-48bb-a9f8-b49ab063e01b"
+      "id": "82b663c4-7e8f-4265-8ba3-68eab7861cfb"
     },
     {
       "cell_type": "code",
@@ -288,7 +296,7 @@
         "            c(0.2, 0.5, 0.3),\n",
         "            c(0.2, 0.7, 0.1))"
       ],
-      "id": "60782f6e-931e-4081-9405-1fe33561e3ab"
+      "id": "4c92e170-cb3d-4916-8df5-e790fec1a98a"
     },
     {
       "cell_type": "code",
@@ -299,10 +307,10 @@
         "c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1))),\n",
         "  mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_2))))"
       ],
-      "id": "e044c701-e66f-4201-9d9d-52e4f6df7a6e"
+      "id": "fee895bd-95ad-408e-a731-04361e53909d"
     },
     {
-      "id": "74610996",
+      "id": "4697bce2",
       "cell_type": "markdown",
       "source": "## 11.3 MNIST\uff1a\u624b\u66f8\u304d\u6570\u5b57\u306e\u5206\u985e",
       "metadata": {}
@@ -313,11 +321,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "library(keras)\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
+        "  library(keras3)\n",
+        "} else {\n",
+        "  library(keras)\n",
+        "}\n",
         "library(tidyverse)\n",
-        "keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())"
+        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
       ],
-      "id": "6ef11111-8d6e-4bd1-84cc-28ef5f8f4bb6"
+      "id": "53ea2bfc-2f49-412f-831b-7e8ea34be757"
     },
     {
       "cell_type": "code",
@@ -327,7 +339,7 @@
       "source": [
         "dim(x_train)"
       ],
-      "id": "7fbe2a6f-3838-4d80-870a-6cff57a1a66b"
+      "id": "3f926680-1806-4df6-9104-c3c6227e7cd4"
     },
     {
       "cell_type": "code",
@@ -337,7 +349,7 @@
       "source": [
         "x_train[5, , ]"
       ],
-      "id": "f4bf90dc-bba7-4a02-84bb-8ad5ca590bd2"
+      "id": "097ad75e-8cac-443c-a6ed-29d89404abcc"
     },
     {
       "cell_type": "code",
@@ -348,7 +360,7 @@
         "plot(as.raster(x = x_train[5, , ],\n",
         "               max = max(x_train)))"
       ],
-      "id": "5c7ef0fe-970b-4820-a0ee-0691d153a50b"
+      "id": "f1d0d2ed-1dab-44b7-894c-f864b92b7bc1"
     },
     {
       "cell_type": "code",
@@ -358,7 +370,7 @@
       "source": [
         "head(y_train)"
       ],
-      "id": "1330e496-e42d-4951-847e-bd14ca53ebb6"
+      "id": "d18dfb52-d548-4d73-ae13-6098e7890f62"
     },
     {
       "cell_type": "code",
@@ -368,7 +380,7 @@
       "source": [
         "c(min(x_train), max(x_train))"
       ],
-      "id": "ad40d9e0-bbcc-4418-a109-ab45ba55cb68"
+      "id": "0e5a8e22-2d01-4bd9-a8c5-a51cd1c49d66"
     },
     {
       "cell_type": "code",
@@ -379,7 +391,7 @@
         "x_train <- x_train / 255\n",
         "x_test  <- x_test  / 255"
       ],
-      "id": "2e042ee5-a3ad-4bba-a6a5-b5b633d6d013"
+      "id": "0ef61e8e-7051-4849-9483-a2300cc782d4"
     },
     {
       "cell_type": "code",
@@ -391,7 +403,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "420b30f3-0ad6-425b-9292-f6210fd1a56a"
+      "id": "5622942a-8e35-4c2e-8d2e-7a8feebc7e26"
     },
     {
       "cell_type": "code",
@@ -413,7 +425,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "02fca59e-65e4-4248-9d2a-5139a145c4a1"
+      "id": "e7eeb8d8-9c4b-476b-a08b-b1ac07d58d24"
     },
     {
       "cell_type": "code",
@@ -432,7 +444,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "f61f4cef-a9fa-4eb0-8fe8-61beb9621554"
+      "id": "c9e28530-e083-43e5-a29c-81ae488cb0c6"
     },
     {
       "cell_type": "code",
@@ -444,7 +456,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "table(y_, y_test)"
       ],
-      "id": "44ed0699-4196-4536-8f0f-3d165ea61b51"
+      "id": "25e506d8-21ee-4b58-8d1f-ec912be35914"
     },
     {
       "cell_type": "code",
@@ -452,7 +464,7 @@
       "metadata": {},
       "outputs": [],
       "source": [],
-      "id": "09893fea-ed12-458b-9f64-2c6b32201259"
+      "id": "c1eb3821-ecae-473f-b041-ffa322af3bd2"
     },
     {
       "cell_type": "code",
@@ -462,7 +474,7 @@
       "source": [
         "mean(y_ == y_test)"
       ],
-      "id": "d99feae3-4093-4a6c-b82b-00b6159bd2f9"
+      "id": "90f570d7-37da-4ebc-a10a-ec6d61a90993"
     },
     {
       "cell_type": "code",
@@ -473,7 +485,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test, y = y_test)"
       ],
-      "id": "c6945033-ffcb-442b-bf8e-2c3d265273aa"
+      "id": "f00accfc-05a0-4cef-ae2b-4b1c73d3b578"
     },
     {
       "cell_type": "code",
@@ -484,7 +496,7 @@
         "x_train2d <- x_train %>% array_reshape(c(-1, 28, 28, 1))\n",
         "x_test2d  <- x_test  %>% array_reshape(c(-1, 28, 28, 1))"
       ],
-      "id": "3880c3c3-a8ac-4aa4-add5-039cba8356f6"
+      "id": "fd9b88c5-e912-4ce2-b40c-dc69a06b99b9"
     },
     {
       "cell_type": "code",
@@ -511,7 +523,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "60e9c297-4d7a-488c-ac58-93b2b2ae9fe0"
+      "id": "a7a9d26e-82ca-4d19-93e1-d741c9692ebd"
     },
     {
       "cell_type": "code",
@@ -530,7 +542,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "20ef7e60-b46b-40de-b7ed-2884dcfed416"
+      "id": "8ef336dc-dad3-4391-a135-050a307f7272"
     },
     {
       "cell_type": "code",
@@ -541,7 +553,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "d29e7a5b-a534-495e-b387-22a9c5bb4715"
+      "id": "47d89624-0649-4ea4-807b-e31f62355652"
     },
     {
       "cell_type": "code",
@@ -569,7 +581,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "e8b3d38f-5d06-4e5b-a604-f3830a41f997"
+      "id": "3cdea6e0-d177-4537-9d60-74af98c8452d"
     },
     {
       "cell_type": "code",
@@ -588,7 +600,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "18e42823-4460-4d5c-b552-6939b34a8348"
+      "id": "9d397aef-4cf3-4470-bef6-bd315716305d"
     },
     {
       "cell_type": "code",
@@ -599,7 +611,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "f3dd98ea-9e82-488e-ad6a-26361a58fa58"
+      "id": "506c6143-16f6-46a5-bfa0-f9d59eb47e10"
     },
     {
       "cell_type": "code",
@@ -617,7 +629,7 @@
         "  filter(y_ != y) %>%                       # \u4e88\u6e2c\u304c\u306f\u305a\u308c\u305f\u3082\u306e\u3092\u6b8b\u3059\n",
         "  arrange(desc(y_prob))                     # \u78ba\u7387\u306e\u5927\u304d\u3044\u9806\u306b\u4e26\u3073\u66ff\u3048\u308b"
       ],
-      "id": "d8f72035-5766-47a0-8d1b-ccc5f244ddb7"
+      "id": "5c7a136c-aabc-47fd-9769-7a9a645b8b89"
     },
     {
       "cell_type": "code",
@@ -627,7 +639,7 @@
       "source": [
         "head(my_result)"
       ],
-      "id": "8df451bd-cc2a-4793-aa72-cee4a58165e7"
+      "id": "ebcd6110-7ce3-46a4-b08a-0f44100e01bd"
     },
     {
       "cell_type": "code",
@@ -653,10 +665,10 @@
         "  theme(legend.position = \"none\") +\n",
         "  facet_grid(. ~ label)"
       ],
-      "id": "7e6f3bca-4fb5-4dd1-95d4-66a6d12d7570"
+      "id": "266d7a58-2557-45c0-b009-31781dad835f"
     },
     {
-      "id": "fde1f228",
+      "id": "adea8ba1",
       "cell_type": "markdown",
       "source": "## 11.4 AutoML",
       "metadata": {}
@@ -668,14 +680,18 @@
       "outputs": [],
       "source": [
         "library(h2o)\n",
-        "library(keras)\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
+        "  library(keras3)\n",
+        "} else {\n",
+        "  library(keras)\n",
+        "}\n",
         "library(tidyverse)\n",
         "\n",
         "h2o.init()\n",
         "h2o.no_progress()\n",
         "# h2o.shutdown(prompt = FALSE) # \u505c\u6b62"
       ],
-      "id": "36e86247-e739-46e5-9d65-6f61a6a6ec6e"
+      "id": "b77293c8-eccf-4ed7-b7e8-ec9fe711cd95"
     },
     {
       "cell_type": "code",
@@ -690,7 +706,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_frame <- h2o.importFile(my_url, header = TRUE) # \u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\uff0e"
       ],
-      "id": "2c0944e0-9c4a-4b58-a4fd-71d859760695"
+      "id": "c49ce4db-d9dd-41a6-86b5-1eaf00e59268"
     },
     {
       "cell_type": "code",
@@ -704,7 +720,7 @@
         "my_frame %>% as.data.frame %>% head\n",
         "# \u7d50\u679c\u306f\u5272\u611b\uff08\u898b\u305f\u76ee\u306f\u540c\u3058\uff09"
       ],
-      "id": "0d2409b2-3760-4af1-b8be-4c2b61d4fc82"
+      "id": "5908ceb6-43cf-4330-806b-79c1721bfabb"
     },
     {
       "cell_type": "code",
@@ -717,7 +733,7 @@
         "    training_frame = my_frame,\n",
         "    max_runtime_secs = 60)"
       ],
-      "id": "3a26c0b8-ae50-46f5-9590-20af07f4aee7"
+      "id": "73d476d5-6001-4eb8-8347-3da3ecf12c4e"
     },
     {
       "cell_type": "code",
@@ -727,7 +743,7 @@
       "source": [
         "min(my_model@leaderboard$rmse)"
       ],
-      "id": "ae77bb9f-84f3-47ec-a7a8-18df91832418"
+      "id": "6bcecbb3-80f1-47ef-ae2c-d3dfb51e9a2d"
     },
     {
       "cell_type": "code",
@@ -743,7 +759,7 @@
         "\n",
         "plot(y, y_)"
       ],
-      "id": "8b8cedf1-496e-42c9-9576-18a4c572a14d"
+      "id": "298efff7-9cb7-4965-9388-35d4e984bd03"
     },
     {
       "cell_type": "code",
@@ -751,12 +767,12 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
+        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
         "my_index <- sample(1:60000, 6000)\n",
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "8cb93395-514b-4175-8c5d-7867651d5f9b"
+      "id": "075576af-c11e-4c23-a899-b9e5ac7c3734"
     },
     {
       "cell_type": "code",
@@ -775,7 +791,7 @@
         "  as.data.frame\n",
         "my_test <- as.h2o(tmp)"
       ],
-      "id": "086c03f9-877d-42bb-b906-fa23c1eaf196"
+      "id": "3b8de2c6-61b1-45d9-a57f-534d6f66c729"
     },
     {
       "cell_type": "code",
@@ -788,7 +804,7 @@
         "    training_frame = my_train,\n",
         "    max_runtime_secs = 120)"
       ],
-      "id": "e729c324-5909-478a-a771-231687748197"
+      "id": "83a51a79-8c29-4424-9e85-7a4f7d427f3c"
     },
     {
       "cell_type": "code",
@@ -799,7 +815,7 @@
         "min(my_model@leaderboard$\n",
         "    mean_per_class_error)"
       ],
-      "id": "e365c112-9786-4fb3-baa5-ff8d3e7c53ac"
+      "id": "13edc0f6-949b-446d-bf5e-9be4f6753729"
     },
     {
       "cell_type": "code",
@@ -813,7 +829,7 @@
         "\n",
         "mean(y_ == y_test)"
       ],
-      "id": "39939a1e-4e3c-4fdb-8524-5c4eb3c808ee"
+      "id": "3629b519-f8d0-47af-a4cb-0f3bb9f2864b"
     }
   ],
   "nbformat": 4,
