--- a/code/R-notebook/r-12.ipynb
+++ b/code/R-notebook/r-12.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "9c263f6a",
+      "id": "bc5770da",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,7 +13,7 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"caret\", \"fable\", \"feasts\", \"prophet\", \"tsibble\", \"urca\")\n",
@@ -21,10 +21,10 @@
         "  install.packages(c(\"ggplot2\"))\n",
         "}"
       ],
-      "id": "5fcd1c5c-db28-498d-8c09-691e93f640a6"
+      "id": "464ec67c-16a7-4275-83d5-52bb7831ad0d"
     },
     {
-      "id": "23d0b843",
+      "id": "ce518daf",
       "cell_type": "markdown",
       "source": "## 12.1 \u65e5\u6642\u3068\u65e5\u6642\u306e\u5217",
       "metadata": {}
@@ -37,7 +37,7 @@
       "source": [
         "as.POSIXct(\"2021-01-01\")"
       ],
-      "id": "e517d90c-c013-4a21-9ab6-1cd6154d12a1"
+      "id": "1924ebe8-4882-4ff3-b33f-d4153e8015cd"
     },
     {
       "cell_type": "code",
@@ -56,10 +56,10 @@
         "seq(from = as.POSIXct(\"2021-01-01 00:00:00\"),\n",
         "    to   = as.POSIXct(\"2021-01-01 03:00:00\"), by = \"2 hour\")"
       ],
-      "id": "5b80fb44-43bf-4b26-87f0-a29111ec4c72"
+      "id": "0f224c5a-78c5-45e8-abf2-7904a5c2319f"
     },
     {
-      "id": "bc292d46",
+      "id": "29cbc74a",
       "cell_type": "markdown",
       "source": "## 12.2 \u6642\u7cfb\u5217\u30c7\u30fc\u30bf\u306e\u4e88\u6e2c",
       "metadata": {}
@@ -72,7 +72,7 @@
       "source": [
         "my_data <- as.vector(AirPassengers)"
       ],
-      "id": "4d07682e-6021-4c8b-b871-538bba060f1b"
+      "id": "2cb040ee-9b23-4d7e-b0c7-6d39baf86c47"
     },
     {
       "cell_type": "code",
@@ -83,7 +83,7 @@
         "n <- length(my_data) # \u30c7\u30fc\u30bf\u6570\uff08144\uff09\n",
         "k <- 108             # \u8a13\u7df4\u30c7\u30fc\u30bf\u6570"
       ],
-      "id": "799030ae-0ef6-4950-b251-a86b98d46f88"
+      "id": "551c2b5a-8f7b-474a-984d-d785fab1a107"
     },
     {
       "cell_type": "code",
@@ -110,7 +110,7 @@
         "\n",
         "head(my_df)"
       ],
-      "id": "07132453-4b8f-4715-b68a-41548b4a8303"
+      "id": "2c3c9a07-fce3-4f34-8411-3f99100d4580"
     },
     {
       "cell_type": "code",
@@ -122,7 +122,7 @@
         "my_test  <- my_df[-(1:k), ]\n",
         "y <- my_test$y"
       ],
-      "id": "fbf56a59-bdcb-4b4e-ac9a-35291af5701e"
+      "id": "a830e70a-136d-40f4-b30a-36635556d054"
     },
     {
       "cell_type": "code",
@@ -137,7 +137,7 @@
         "  geom_line()\n",
         "my_plot"
       ],
-      "id": "76f017e8-8f52-4afc-8cc4-49acdc85116f"
+      "id": "84617760-c969-4691-87d4-35e9b3c37d2d"
     },
     {
       "cell_type": "code",
@@ -150,7 +150,7 @@
         "y_ <- my_lm_model %>% predict(my_test)\n",
         "caret::RMSE(y, y_) # RMSE\uff08\u30c6\u30b9\u30c8\uff09"
       ],
-      "id": "07597598-49ff-40fa-becd-0dafcca248a9"
+      "id": "1c2cd6a3-13a6-48f4-9615-0602d3e60958"
     },
     {
       "cell_type": "code",
@@ -163,7 +163,7 @@
         "  mutate(y = y_, label = \"model\")\n",
         "my_plot + geom_line(data = tmp)"
       ],
-      "id": "84d9d0f6-279c-4451-b036-6a5f3858a355"
+      "id": "bf914a75-a3dc-40cb-8d0f-8d5dfd2ab11c"
     },
     {
       "cell_type": "code",
@@ -175,7 +175,7 @@
         "my_arima_model <- my_train %>% model(ARIMA(y))\n",
         "my_arima_model"
       ],
-      "id": "b46707c0-5676-4a4e-a2fb-f64f395bdafc"
+      "id": "b7c8e8cb-940b-4eee-8fc8-6bb16e043927"
     },
     {
       "cell_type": "code",
@@ -186,7 +186,7 @@
         "tmp <- my_arima_model %>% forecast(h = \"3 years\")\n",
         "head(tmp)"
       ],
-      "id": "c18e6151-4bc1-4959-9645-ae7b05e96b6d"
+      "id": "6fc63b0e-666e-4a05-90ac-88e5210500ff"
     },
     {
       "cell_type": "code",
@@ -197,7 +197,7 @@
         "y_ <- tmp$.mean\n",
         "caret::RMSE(y_, y)"
       ],
-      "id": "af3d988a-b590-4f22-a72c-4631a25aedf1"
+      "id": "19166890-94bf-4442-b5d8-e45dc405d0e4"
     },
     {
       "cell_type": "code",
@@ -214,7 +214,7 @@
         "                y = y,\n",
         "                color = label))"
       ],
-      "id": "08bf6ea5-8424-4988-82d6-45310d3437b3"
+      "id": "6f82290c-51f8-4523-a225-46542fe46055"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "my_prophet_model <- my_train %>%\n",
         "  prophet(seasonality.mode = \"multiplicative\")"
       ],
-      "id": "4468dc16-88aa-49ef-bc93-5ebffe0507ff"
+      "id": "285cd4a1-cc34-4a04-8671-12ab80c52ca0"
     },
     {
       "cell_type": "code",
@@ -237,7 +237,7 @@
         "tmp <- my_prophet_model %>% predict(my_test)\n",
         "head(tmp[, c(\"ds\", \"yhat\", \"yhat_lower\", \"yhat_upper\")])"
       ],
-      "id": "5c759fee-060a-4a59-b0d7-fae04d22cc11"
+      "id": "a24e324e-882d-4d09-91c8-37632736c396"
     },
     {
       "cell_type": "code",
@@ -248,7 +248,7 @@
         "y_ <- tmp$yhat\n",
         "caret::RMSE(y_, y)"
       ],
-      "id": "4f2d2635-f826-4a25-8fb0-e7316b722577"
+      "id": "c532ee13-3b8d-407f-89a1-7c0668486f15"
     },
     {
       "cell_type": "code",
@@ -262,7 +262,7 @@
         "  geom_line(data = my_train, aes(x = as.POSIXct(ds))) +\n",
         "  geom_line(data = my_test,  aes(x = as.POSIXct(ds)), color = \"red\")"
       ],
-      "id": "fcf54064-4d7f-4012-a78d-64b8efb71391"
+      "id": "b4b145ed-eef4-4399-bf35-7948c988f688"
     }
   ],
   "nbformat": 4,
