--- a/code/R-notebook/r-13.ipynb
+++ b/code/R-notebook/r-13.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "11a1c47c",
+      "id": "8e509d97",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -13,17 +13,17 @@
       "outputs": [],
       "source": [
         "# Google Colaboratory\u306e\u74b0\u5883\u8a2d\u5b9a\n",
-        "if (file.exists(\"/content\")) {\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  options(Ncpus = parallel::detectCores())\n",
         "  installed_packages <- rownames(installed.packages())\n",
         "  packages_to_install <- c(\"factoextra\", \"ggbiplot\", \"igraph\")\n",
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "caced1c8-d298-41b8-a7ca-a6400ffe081e"
+      "id": "f0877c85-a731-4370-b313-872c634e034f"
     },
     {
-      "id": "514d09fa",
+      "id": "bfaf1da3",
       "cell_type": "markdown",
       "source": "## 13.1 \u4e3b\u6210\u5206\u5206\u6790",
       "metadata": {}
@@ -45,7 +45,7 @@
         "  row.names = c(\"A\", \"B\", \"C\", \"D\", \"E\", \"F\"))\n",
         "my_result <- my_data %>% prcomp # \u4e3b\u6210\u5206\u5206\u6790\u306e\u5b9f\u884c"
       ],
-      "id": "86509fbc-83de-444e-b7db-4e7a93e46bb0"
+      "id": "2a89e421-a948-4f67-a5e5-4b5a50a8e81a"
     },
     {
       "cell_type": "code",
@@ -55,7 +55,7 @@
       "source": [
         "my_result$x # \u4e3b\u6210\u5206\u30b9\u30b3\u30a2"
       ],
-      "id": "ea1d150d-4dbd-4c9e-8c70-0da25b4dad97"
+      "id": "a2d14556-0792-44b6-b91b-2b4b6f67141d"
     },
     {
       "cell_type": "code",
@@ -67,7 +67,7 @@
         "  labels = row.names(my_data),\n",
         "  scale = 0)"
       ],
-      "id": "7e77f8a5-d75e-497c-9de1-097d509d4168"
+      "id": "713ebd91-ded1-4297-acf5-9f5203629345"
     },
     {
       "cell_type": "code",
@@ -77,7 +77,7 @@
       "source": [
         "my_result$rotation %>% t"
       ],
-      "id": "be4f3de7-4073-4c2e-842c-c3a647797496"
+      "id": "ea8ecda1-b767-47f4-8430-dc3a371705e6"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "summary(my_result)"
       ],
-      "id": "bda17dd5-447b-4e93-a59e-0add974463d9"
+      "id": "460f8ed5-c1cf-4836-8642-36f875b42fef"
     },
     {
       "cell_type": "code",
@@ -104,7 +104,7 @@
         "\n",
         "my_result$x # \u4e3b\u6210\u5206\u30b9\u30b3\u30a2"
       ],
-      "id": "44bbcd70-d1ad-44e0-9124-9e1fd2d1e463"
+      "id": "5bc2125e-53d1-401c-9403-261e429e4cf9"
     },
     {
       "cell_type": "code",
@@ -122,7 +122,7 @@
         "Z %*% tmp$vectors                    # \u4e3b\u6210\u5206\u30b9\u30b3\u30a2\uff08\u7d50\u679c\u306f\u5272\u611b\uff09\n",
         "cumsum(tmp$values) / sum(tmp$values) # \u7d2f\u7a4d\u5bc4\u4e0e\u7387"
       ],
-      "id": "5e29396d-1551-4d20-8e83-29cf55e0f0d1"
+      "id": "bee4ade5-888e-4bc4-8462-e6d23d62c114"
     },
     {
       "cell_type": "code",
@@ -145,10 +145,10 @@
         "e <- d^2 / (n - 1) # \u5206\u6563\u5171\u5206\u6563\u884c\u5217\u306e\u56fa\u6709\u5024\n",
         "cumsum(e) / sum(e) # \u7d2f\u7a4d\u5bc4\u4e0e\u7387"
       ],
-      "id": "eff6a969-0caa-47e1-8ca5-a127234c8abe"
+      "id": "fb6bcb00-586d-4a9d-a240-fde99313e264"
     },
     {
-      "id": "8c15361b",
+      "id": "d339ccad",
       "cell_type": "markdown",
       "source": "## 13.2 \u30af\u30e9\u30b9\u30bf\u5206\u6790",
       "metadata": {}
@@ -170,7 +170,7 @@
         "  dist(\"euclidian\") %>% # dist\u3060\u3051\u3067\u3082\u53ef\n",
         "  hclust(\"complete\")    # hclust\u3060\u3051\u3067\u3082\u53ef"
       ],
-      "id": "7e0821dd-41da-46ae-ab63-4d06edc0029c"
+      "id": "363bb897-55bf-4f01-ba4f-72342f0bc965"
     },
     {
       "cell_type": "code",
@@ -182,7 +182,7 @@
         "  k = 3, # \u30af\u30e9\u30b9\u30bf\u6570\n",
         "  rect = TRUE, rect_fill = TRUE)"
       ],
-      "id": "d7b26264-6608-463b-82b2-8d1d393d5538"
+      "id": "5fa3d5d9-38cb-4d93-b6b4-5c831db59e8c"
     },
     {
       "cell_type": "code",
@@ -195,7 +195,7 @@
         "  rect = TRUE, rect_fill = TRUE,\n",
         "  type = \"phylogenic\")"
       ],
-      "id": "7fede84d-1008-4e14-a511-b62b7f72af7d"
+      "id": "cf04f090-ece7-46bf-8f45-8a73b039866a"
     },
     {
       "cell_type": "code",
@@ -205,7 +205,7 @@
       "source": [
         "my_result %>% cutree(3)"
       ],
-      "id": "d9e9e0b1-a585-4f9a-a722-f610dc24502d"
+      "id": "a43fb1a7-3683-47c2-8d73-925919e50091"
     },
     {
       "cell_type": "code",
@@ -228,7 +228,7 @@
         "    gplots::heatmap.2(cexRow = 1, cexCol = 1), # \u30e9\u30d9\u30eb\u306e\u30b5\u30a4\u30ba\u3092\u6307\u5b9a\u3057\u3066\u63cf\u753b\u3059\u308b\uff0e\n",
         "  silent = TRUE)"
       ],
-      "id": "17683c8a-6a58-47c8-94ea-f30dbec7a925"
+      "id": "fa94c1cc-385e-45a1-9065-a8af2e1159d4"
     },
     {
       "cell_type": "code",
@@ -245,7 +245,7 @@
         "\n",
         "my_result <- my_data %>% kmeans(3)"
       ],
-      "id": "361bf32b-2661-4012-9968-bfa8e4bc5933"
+      "id": "ca6861ac-3cfb-4738-ade1-1a52f1aaf525"
     },
     {
       "cell_type": "code",
@@ -255,7 +255,7 @@
       "source": [
         "my_result$cluster"
       ],
-      "id": "6b80f596-4d47-419c-9cb4-098abcad74af"
+      "id": "9b467c90-3a7f-4b66-980f-ec1e0cc705ac"
     },
     {
       "cell_type": "code",
@@ -275,7 +275,7 @@
         "})\n",
         "gridExtra::grid.arrange(f[[1]], f[[2]], f[[3]], f[[4]], ncol = 2)"
       ],
-      "id": "49add5b3-77ff-459d-b040-d07b45c754b5"
+      "id": "917b1658-33f4-4278-bd47-7232c4d425fb"
     },
     {
       "cell_type": "code",
@@ -285,7 +285,7 @@
       "source": [
         "fviz_nbclust(my_data, kmeans, method = \"wss\")"
       ],
-      "id": "1b1044a4-0863-441a-881e-8ac57b3f51bd"
+      "id": "e7e1f48c-5081-42b4-b36d-fa07560bcd63"
     },
     {
       "cell_type": "code",
@@ -309,7 +309,7 @@
         "  geom_point(shape = iris$Species) +               # \u5f62\u3067\u54c1\u7a2e\u3092\u8868\u73fe\u3059\u308b\uff0e\n",
         "  theme(legend.position = \"none\")"
       ],
-      "id": "691acbfd-7295-4262-aa28-4105a240058b"
+      "id": "cfcc2222-6184-4670-89d5-49bb9bed51d8"
     }
   ],
   "nbformat": 4,
